--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5652,6 +5652,7 @@ payload:
   - '+.646000.com'
   - '+.6463.com'
   - '+.64644444.com'
+  - '+.648sy.com'
   - '+.64ba.com'
   - '+.64dns.com'
   - '+.64ds.com'
@@ -8258,7 +8259,6 @@ payload:
   - '+.agoodme.com'
   - '+.agora.io'
   - '+.agrantsem.com'
-  - '+.agrgsp.com'
   - '+.agri35.com'
   - '+.agrittex.com'
   - '+.agrochemshow.com'
@@ -10515,7 +10515,6 @@ payload:
   - '+.bajiehechuang.com'
   - '+.bajintech.com'
   - '+.bajiu.org'
-  - '+.bajson.com'
   - '+.bakaawt.com'
   - '+.bakaxl.com'
   - '+.bakbitionb.com'
@@ -11002,6 +11001,7 @@ payload:
   - '+.bdwm.net'
   - '+.bdwork.com'
   - '+.bdx100.com'
+  - '+.bdxdnj.com'
   - '+.bdxhj.com'
   - '+.bdxiaodai.com'
   - '+.bdxiguaimg.com'
@@ -11089,6 +11089,7 @@ payload:
   - '+.beidousafety.org'
   - '+.beidousj.com'
   - '+.beidouxingxueche.com'
+  - '+.beieryouxi.com'
   - '+.beifabook.com'
   - '+.beifang.net'
   - '+.beifangfoshifen.com'
@@ -11882,6 +11883,7 @@ payload:
   - '+.bjfsali.com'
   - '+.bjfwbz.org'
   - '+.bjfyw.org'
+  - '+.bjg.ink'
   - '+.bjgas.com'
   - '+.bjgemi.com'
   - '+.bjggk.com'
@@ -16249,7 +16251,6 @@ payload:
   - '+.cmzj.net'
   - '+.cmzy168.com'
   - '+.cmzyk.com'
-  - '+.cn-api.samsungcloud.com'
   - '+.cn-bowei.com'
   - '+.cn-c114.net'
   - '+.cn-em.com'
@@ -18345,6 +18346,7 @@ payload:
   - '+.daikuan.com'
   - '+.daikuane.com'
   - '+.daili666.net'
+  - '+.dailian.info'
   - '+.dailianqun.com'
   - '+.dailiantong.com'
   - '+.dailianzj.com'
@@ -19476,6 +19478,7 @@ payload:
   - '+.diediao123.com'
   - '+.diemameishi.com'
   - '+.diemoe.net'
+  - '+.dieniao.com'
   - '+.dierkezhan.com'
   - '+.diershoubing.com'
   - '+.dietfd.com'
@@ -25471,7 +25474,6 @@ payload:
   - '+.gooyo.com'
   - '+.goozp.com'
   - '+.gopedu.com'
-  - '+.gopherchina.org'
   - '+.gopiaowu.com'
   - '+.goplaycn.com'
   - '+.goplayervideo.com'
@@ -26056,7 +26058,6 @@ payload:
   - '+.guoxinqh.com'
   - '+.guoxue.com'
   - '+.guoxue123.com'
-  - '+.guoxuejiaoyuwang.com'
   - '+.guoxuemeng.com'
   - '+.guoxuemi.com'
   - '+.guoxuwang.com'
@@ -31128,6 +31129,7 @@ payload:
   - '+.iliuliu.com'
   - '+.ilixiangguo.com'
   - '+.iliyu.com'
+  - '+.ilkeji.com'
   - '+.ilkwork.com'
   - '+.illumpaper.com'
   - '+.ilmgq.com'
@@ -31624,6 +31626,7 @@ payload:
   - '+.ip168.com'
   - '+.ip192.com'
   - '+.ip33.com'
+  - '+.ip3366.net'
   - '+.ip518.com'
   - '+.ip668o.com'
   - '+.ip669.com'
@@ -34773,7 +34776,6 @@ payload:
   - '+.jycloudgslb.net'
   - '+.jydc.com'
   - '+.jydoc.com'
-  - '+.jydsxh.com'
   - '+.jyeoo.com'
   - '+.jyeoo.net'
   - '+.jyepc.com'
@@ -35777,6 +35779,7 @@ payload:
   - '+.koalacam.net'
   - '+.koaladoit.com'
   - '+.koalareading.com'
+  - '+.kobold1855.com'
   - '+.koboldgame.com'
   - '+.kobox.tv'
   - '+.kocla.com'
@@ -36167,6 +36170,7 @@ payload:
   - '+.kudasuye.com'
   - '+.kudiannao.com'
   - '+.kudianqi.com'
+  - '+.kudiaoyu.com'
   - '+.kudingyu.com'
   - '+.kuface.com'
   - '+.kufangwuyou.com'
@@ -36340,6 +36344,7 @@ payload:
   - '+.kxbld.com'
   - '+.kxbox.com'
   - '+.kxceping.com'
+  - '+.kxdaili.com'
   - '+.kxdao.com'
   - '+.kxdpm.com'
   - '+.kxdw.com'
@@ -36672,6 +36677,7 @@ payload:
   - '+.lanzou.com'
   - '+.lanzoug.com'
   - '+.lanzoui.com'
+  - '+.lanzoup.com'
   - '+.lanzouq.com'
   - '+.lanzoux.com'
   - '+.lanzun.net'
@@ -37910,7 +37916,6 @@ payload:
   - '+.liuhaipeng.com'
   - '+.liuhaolin.com'
   - '+.liuhu.net'
-  - '+.liuinsect.com'
   - '+.liujiajia.me'
   - '+.liujiangblog.com'
   - '+.liujiasj.com'
@@ -39463,7 +39468,6 @@ payload:
   - '+.manhua456.com'
   - '+.manhuaba.cc'
   - '+.manhuabei.com'
-  - '+.manhuacat.com'
   - '+.manhuacheng.com'
   - '+.manhuadao.com'
   - '+.manhuadaohang.com'
@@ -40498,7 +40502,6 @@ payload:
   - '+.milo-star.com'
   - '+.miloktv.com'
   - '+.miloli.info'
-  - '+.miloos.com'
   - '+.milu.com'
   - '+.milvzn.com'
   - '+.mima.club'
@@ -40977,6 +40980,7 @@ payload:
   - '+.moerkeji.net'
   - '+.moerlong.com'
   - '+.moesola.com'
+  - '+.moetas.com'
   - '+.moetu.org'
   - '+.moetuji.com'
   - '+.moew.xyz'
@@ -42974,7 +42978,6 @@ payload:
   - '+.nutz.io'
   - '+.nutzam.com'
   - '+.nuubao.com'
-  - '+.nuuha.com'
   - '+.nuuxie.com'
   - '+.nuvoltatech.com'
   - '+.nuvoton-m0.com'
@@ -44462,7 +44465,6 @@ payload:
   - '+.phpfans.net'
   - '+.phpfdc.com'
   - '+.phpfs.com'
-  - '+.phpgen.com'
   - '+.phpha.com'
   - '+.phphub.org'
   - '+.phpjiami.com'
@@ -44825,6 +44827,7 @@ payload:
   - '+.plob.org'
   - '+.plotcup.com'
   - '+.plpeng.xin'
+  - '+.plqdf.com'
   - '+.plsmspx.com'
   - '+.plsub.com'
   - '+.pluosi.com'
@@ -47979,7 +47982,6 @@ payload:
   - '+.russellluo.com'
   - '+.rustdesk.com'
   - '+.ruthus.com'
-  - '+.rutisher.com'
   - '+.ruubypay.com'
   - '+.ruuxee.com'
   - '+.ruvar.com'
@@ -48792,6 +48794,7 @@ payload:
   - '+.sellingexpress.net'
   - '+.selypan.com'
   - '+.sem123.com'
+  - '+.semeye.com'
   - '+.semgg.com'
   - '+.semgz.com'
   - '+.semicic.com'
@@ -49179,6 +49182,7 @@ payload:
   - '+.shanp.com'
   - '+.shanpow.com'
   - '+.shanqb.com'
+  - '+.shanqu.cc'
   - '+.shanse8.com'
   - '+.shanshoufu.com'
   - '+.shantoumama.com'
@@ -50614,6 +50618,7 @@ payload:
   - '+.skydust.net'
   - '+.skyeaglee.com'
   - '+.skyecs.com'
+  - '+.skyfeather.online'
   - '+.skyfollowsnow.pro'
   - '+.skyfont.com'
   - '+.skyfox.org'
@@ -50700,6 +50705,7 @@ payload:
   - '+.sm-check.com'
   - '+.sm-cq.com'
   - '+.sm-main.com'
+  - '+.sm012.com'
   - '+.sm160.com'
   - '+.sm160.net'
   - '+.sm688839.com'
@@ -53907,7 +53913,6 @@ payload:
   - '+.tjqktgg.com'
   - '+.tjrge.com'
   - '+.tjsjnxh.com'
-  - '+.tjspiraxsarco.com'
   - '+.tjst.net'
   - '+.tjstats.com'
   - '+.tjtzkj.com'
@@ -56971,8 +56976,10 @@ payload:
   - '+.wangzhan6.com'
   - '+.wangzhanbao.cc'
   - '+.wangzhanbianji.com'
+  - '+.wangzhanbus.com'
   - '+.wangzhanchi.com'
   - '+.wangzhanmeng.com'
+  - '+.wangzhanzj.com'
   - '+.wangzhe.com'
   - '+.wangzhengzhen.com'
   - '+.wangzhennan.com'
@@ -57475,7 +57482,6 @@ payload:
   - '+.weilanhaian.com'
   - '+.weilanliuxue.com'
   - '+.weile.com'
-  - '+.weili-cn.com'
   - '+.weiling520.com'
   - '+.weilingdi.com'
   - '+.weilinovel.net'
@@ -59538,7 +59544,6 @@ payload:
   - '+.wztf121.com'
   - '+.wzwmw.com'
   - '+.wzwqs.com'
-  - '+.wzxyabc.com'
   - '+.wzyestar.com'
   - '+.wzyun.net'
   - '+.wzz180809.net'
@@ -60924,6 +60929,7 @@ payload:
   - '+.xinsilu.com'
   - '+.xinstall.com'
   - '+.xinstatic.com'
+  - '+.xinsui.net'
   - '+.xintaileju.com'
   - '+.xintaizhou.com'
   - '+.xintheme.com'
@@ -61426,6 +61432,7 @@ payload:
   - '+.xncredit.com'
   - '+.xndm.tech'
   - '+.xnguke.com'
+  - '+.xnh123.com'
   - '+.xnhdgame.com'
   - '+.xninja.org'
   - '+.xnipapp.com'
@@ -63890,7 +63897,6 @@ payload:
   - '+.youhuafuzhi.com'
   - '+.youhuashu.com'
   - '+.youhugmedia.com'
-  - '+.youhuiyanxuan.com'
   - '+.youhundao.com'
   - '+.youhutong.com'
   - '+.youideal.net'
@@ -67212,6 +67218,7 @@ payload:
   - '+.zlhome.com'
   - '+.zlhui.com'
   - '+.zlibs.com'
+  - '+.zliiii.com'
   - '+.zlimg.com'
   - '+.zlink-e.com'
   - '+.zlkb.net'
@@ -67362,7 +67369,6 @@ payload:
   - '+.zongheng.com'
   - '+.zonghengche.com'
   - '+.zonghengke.com'
-  - '+.zongjie100.com'
   - '+.zonglai.mobi'
   - '+.zongliwei.com'
   - '+.zongming.net'
