--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1210,7 +1210,6 @@ payload:
   - '+.123hao.com'
   - '+.123hdp.com'
   - '+.123huodong.com'
-  - '+.123ku.com'
   - '+.123lihun.com'
   - '+.123meiyan.com'
   - '+.123nice.net'
@@ -4968,6 +4967,7 @@ payload:
   - '+.53tct.com'
   - '+.53xjd.com'
   - '+.53yao.com'
+  - '+.53yu.com'
   - '+.53zw.net'
   - '+.54.com'
   - '+.54114.com'
@@ -4992,6 +4992,7 @@ payload:
   - '+.54kefu.net'
   - '+.54lol.com'
   - '+.54manong.com'
+  - '+.54md.com'
   - '+.54op.com'
   - '+.54share.com'
   - '+.54tf.com'
@@ -6465,7 +6466,6 @@ payload:
   - '+.80juqing.com'
   - '+.80kongjian.com'
   - '+.80kuku.com'
-  - '+.80lib.com'
   - '+.80ml.com'
   - '+.80nb.com'
   - '+.80note.com'
@@ -7022,6 +7022,7 @@ payload:
   - '+.91daizhang.com'
   - '+.91danji.com'
   - '+.91data.com'
+  - '+.91datong.com'
   - '+.91dba.com'
   - '+.91dbb.com'
   - '+.91dbq.com'
@@ -7086,7 +7087,6 @@ payload:
   - '+.91mariadb.com'
   - '+.91maths.com'
   - '+.91mitang.com'
-  - '+.91mjw.com'
   - '+.91money.com'
   - '+.91muzhi.com'
   - '+.91nzh.com'
@@ -7622,7 +7622,6 @@ payload:
   - '+.99read.com'
   - '+.99rom.com'
   - '+.99sky.com'
-  - '+.99suliao.com'
   - '+.99sun.com'
   - '+.99sushe.com'
   - '+.99vf.com'
@@ -10076,7 +10075,6 @@ payload:
   - '+.avicui.com'
   - '+.avivaqueen.com'
   - '+.avivasign.com'
-  - '+.avjoy.me'
   - '+.avlsec.com'
   - '+.avlyun.com'
   - '+.avnpc.com'
@@ -11068,7 +11066,6 @@ payload:
   - '+.beian88.com'
   - '+.beianapi29.com'
   - '+.beianapi30.com'
-  - '+.beianbaba.com'
   - '+.beianidc.com'
   - '+.beianw.net'
   - '+.beibaozq.com'
@@ -11207,7 +11204,6 @@ payload:
   - '+.benyh.com'
   - '+.benyht.com'
   - '+.benyouhui.com'
-  - '+.benz-photo.com'
   - '+.benzhb.com'
   - '+.benzhibbs.com'
   - '+.benztu.com'
@@ -11587,7 +11583,6 @@ payload:
   - '+.binkery.com'
   - '+.binmt.cc'
   - '+.binmtplus.com'
-  - '+.binospace.com'
   - '+.binpang.me'
   - '+.binqsoft.com'
   - '+.binstream.live'
@@ -19204,7 +19199,6 @@ payload:
   - '+.dggjqw.com'
   - '+.dggkj.com'
   - '+.dggvip.net'
-  - '+.dghfw.com'
   - '+.dghqmotor.com'
   - '+.dginfo.com'
   - '+.dgjiuqi.com'
@@ -19592,7 +19586,6 @@ payload:
   - '+.diqu114.com'
   - '+.diqua.com'
   - '+.dir001.com'
-  - '+.dircha.com'
   - '+.directui.com'
   - '+.discourse-studies.com'
   - '+.discoversources.com'
@@ -19796,6 +19789,7 @@ payload:
   - '+.dm190.com'
   - '+.dm300.com'
   - '+.dm321.net'
+  - '+.dm4mm.com'
   - '+.dm5.com'
   - '+.dm77.com'
   - '+.dm789.com'
@@ -20595,6 +20589,7 @@ payload:
   - '+.duoduotv.com'
   - '+.duoduoyin.com'
   - '+.duoduoyouli888.com'
+  - '+.duoduozb.com'
   - '+.duoduozhifu.com'
   - '+.duoente.net'
   - '+.duoerpharmacy.com'
@@ -22569,7 +22564,6 @@ payload:
   - '+.fanglist.com'
   - '+.fanglitong.com'
   - '+.fangmeileju.com'
-  - '+.fangniaowang.net'
   - '+.fangqk.com'
   - '+.fangshanzi.com'
   - '+.fangshuitan888.com'
@@ -23422,7 +23416,6 @@ payload:
   - '+.flashv8.com'
   - '+.flashwar.com'
   - '+.flashwing.net'
-  - '+.flashyl.com'
   - '+.flatshare365.com'
   - '+.flawcache.com'
   - '+.flduo.com'
@@ -25581,7 +25574,6 @@ payload:
   - '+.gpnewtech.com'
   - '+.gppapp.com'
   - '+.gps8.com'
-  - '+.gpshk.cc'
   - '+.gpslook.net'
   - '+.gpsoo.net'
   - '+.gpsspg.com'
@@ -25912,6 +25904,7 @@ payload:
   - '+.gudaovision.com'
   - '+.gudi.cc'
   - '+.gudianhr.com'
+  - '+.guduodata.com'
   - '+.guer.org'
   - '+.guestops.com'
   - '+.gufeiposuiji.com'
@@ -26464,6 +26457,7 @@ payload:
   - '+.h-shgroup.com'
   - '+.h-ui.net'
   - '+.h-world.com'
+  - '+.h-zl.net'
   - '+.h0591.com'
   - '+.h0758.net'
   - '+.h0f.me'
@@ -28322,7 +28316,6 @@ payload:
   - '+.hkpep.com'
   - '+.hkproperty.com'
   - '+.hkqbh.com'
-  - '+.hkqq8.com'
   - '+.hkskyloyd.com'
   - '+.hkstv.tv'
   - '+.hkt4.com'
@@ -28757,7 +28750,6 @@ payload:
   - '+.horizonrcg.com'
   - '+.horn-yacht.com'
   - '+.horsa.org'
-  - '+.horsehr.com'
   - '+.horti-expo2019.com'
   - '+.horti-expo2019.org'
   - '+.hortor.net'
@@ -29593,6 +29585,7 @@ payload:
   - '+.huitouyu.com'
   - '+.huitouzi.com'
   - '+.huitu.com'
+  - '+.huitun.com'
   - '+.huiurl.com'
   - '+.huivo.com'
   - '+.huiweixin.com'
@@ -29715,7 +29708,6 @@ payload:
   - '+.huocc.com'
   - '+.huochai.mobi'
   - '+.huochaihe.cc'
-  - '+.huoche.biz'
   - '+.huoche.com'
   - '+.huoche.net'
   - '+.huoche.wiki'
@@ -30354,6 +30346,7 @@ payload:
   - '+.ibianqu.com'
   - '+.ibiaozhi.com'
   - '+.ibicn.com'
+  - '+.ibidian.com'
   - '+.ibiji.com'
   - '+.ibimawen.com'
   - '+.ibimuyu.com'
@@ -33341,7 +33334,6 @@ payload:
   - '+.jingwentian.com'
   - '+.jingwuhui.com'
   - '+.jingxi.com'
-  - '+.jingxialai.com'
   - '+.jingxianglawfirm.com'
   - '+.jingxinad.com'
   - '+.jingxingseo.com'
@@ -34277,6 +34269,7 @@ payload:
   - '+.jsnx.net'
   - '+.jsnxs.com'
   - '+.jsocr.com'
+  - '+.json-json.com'
   - '+.jsonin.com'
   - '+.jsonnode.com'
   - '+.jsososo.com'
@@ -38591,6 +38584,7 @@ payload:
   - '+.ls666.com'
   - '+.lsbankchina.com'
   - '+.lsbchina.com'
+  - '+.lsbin.com'
   - '+.lsccb.com'
   - '+.lsfyw.net'
   - '+.lsg3.com'
@@ -44084,6 +44078,7 @@ payload:
   - '+.parkchina.net'
   - '+.parkdaily.com'
   - '+.parkingjet.com'
+  - '+.parkingquickly.com'
   - '+.parkmecn.com'
   - '+.parkviewgreen.com'
   - '+.parnassusdata.com'
@@ -45474,7 +45469,6 @@ payload:
   - '+.qbxz.com'
   - '+.qc-dds.net'
   - '+.qc-hr.com'
-  - '+.qc-pm.com'
   - '+.qc027.com'
   - '+.qc178.com'
   - '+.qc188.com'
@@ -46637,9 +46631,11 @@ payload:
   - '+.qtimes.net'
   - '+.qtj5.com'
   - '+.qtlcdn.com'
+  - '+.qtlcdncn.info'
   - '+.qtlcn.com'
   - '+.qtlglb.com'
   - '+.qtlglb.info'
+  - '+.qtlgslbcn.info'
   - '+.qtluyuan.com'
   - '+.qtmojo.com'
   - '+.qtonghua.com'
@@ -47565,6 +47561,7 @@ payload:
   - '+.ritarpower.com'
   - '+.ritering.com'
   - '+.rivergame.net'
+  - '+.riyuanma.com'
   - '+.riyuba.com'
   - '+.riyuexing.org'
   - '+.riyuezhuan.com'
@@ -49040,6 +49037,7 @@ payload:
   - '+.shadow-forum.com'
   - '+.shadowedu.net'
   - '+.shadowq.com'
+  - '+.shaduizi.com'
   - '+.shafa.com'
   - '+.shafaguanjia.com'
   - '+.shahaizi.com'
@@ -50503,7 +50501,6 @@ payload:
   - '+.sjdzp.net'
   - '+.sjetdz.com'
   - '+.sjfcdn.com'
-  - '+.sjfkai.com'
   - '+.sjfpro.com'
   - '+.sjfx.com'
   - '+.sjfzxm.com'
@@ -52003,7 +52000,6 @@ payload:
   - '+.sushouka688.com'
   - '+.susong51.com'
   - '+.susongbbs.com'
-  - '+.susouth.com'
   - '+.sustc.us'
   - '+.susudm.com'
   - '+.suteidc.com'
@@ -53313,6 +53309,7 @@ payload:
   - '+.tenshi.cc'
   - '+.tensorchip.com'
   - '+.tensornews.net'
+  - '+.tenstars.net'
   - '+.tensynad.com'
   - '+.tensynchina.com'
   - '+.tentrue.com'
@@ -54226,6 +54223,7 @@ payload:
   - '+.topeetboard.com'
   - '+.topenergy.org'
   - '+.topengroup.net'
+  - '+.topfisc.com'
   - '+.topflames.com'
   - '+.topfreeweb.net'
   - '+.topgslb.com'
@@ -54252,6 +54250,7 @@ payload:
   - '+.topnews9.com'
   - '+.topomel.com'
   - '+.toppdu.com'
+  - '+.topperuse.com'
   - '+.toppiao.net'
   - '+.topproio.com'
   - '+.topqh.net'
@@ -58910,6 +58909,7 @@ payload:
   - '+.wpcnzz.com'
   - '+.wpdaxue.com'
   - '+.wpengapp.com'
+  - '+.wper.com'
   - '+.wpgdadatong.com'
   - '+.wpgdadawant.com'
   - '+.wphonelife.com'
@@ -59539,7 +59539,6 @@ payload:
   - '+.wzright.com'
   - '+.wzsee.com'
   - '+.wzsky.net'
-  - '+.wzssbs.com'
   - '+.wzstationery.com'
   - '+.wztf121.com'
   - '+.wzwmw.com'
@@ -61580,7 +61579,6 @@ payload:
   - '+.xshuotxt.com'
   - '+.xshwp.com'
   - '+.xsina.net'
-  - '+.xsj2020888.com'
   - '+.xsj2021888.com'
   - '+.xsjedu.org'
   - '+.xsjsource.com'
@@ -63157,7 +63155,6 @@ payload:
   - '+.yingmi.com'
   - '+.yingmile.com'
   - '+.yingming.net'
-  - '+.yingmishi.com'
   - '+.yingmoo.com'
   - '+.yingpingji.com'
   - '+.yingsheng.com'
@@ -65634,6 +65631,7 @@ payload:
   - '+.zggdjj.com'
   - '+.zggjgy.com'
   - '+.zgglkx.com'
+  - '+.zgglyun.com'
   - '+.zggonglue.com'
   - '+.zggqzp.com'
   - '+.zggx.net'
@@ -65708,6 +65706,7 @@ payload:
   - '+.zgsd.net'
   - '+.zgsee.net'
   - '+.zgserver.com'
+  - '+.zgshici.com'
   - '+.zgshifu.com'
   - '+.zgshige.com'
   - '+.zgshjj.com'
@@ -66420,6 +66419,7 @@ payload:
   - '+.zhongguojianmenguan.com'
   - '+.zhongguojie.org'
   - '+.zhongguojie.wang'
+  - '+.zhongguojinrongtouziwang.com'
   - '+.zhongguojixiewang.com'
   - '+.zhongguomap.com'
   - '+.zhongguopeixun.net'
