--- a/directbak.yaml
+++ b/directbak.yaml
@@ -540,7 +540,6 @@ payload:
   - '+.0728f.com'
   - '+.0730188.com'
   - '+.0730news.com'
-  - '+.0730seo.com'
   - '+.073122.com'
   - '+.0731a.com'
   - '+.0731cfw.com'
@@ -6439,7 +6438,6 @@ payload:
   - '+.8090app.com'
   - '+.8090cdn.com'
   - '+.8090mt.com'
-  - '+.8090st.com'
   - '+.8090vision.com'
   - '+.8090xx.com'
   - '+.8090yx.com'
@@ -18860,6 +18858,7 @@ payload:
   - '+.ddsaas.com'
   - '+.ddske.com'
   - '+.ddstarapp.com'
+  - '+.ddswcm.com'
   - '+.ddsy.com'
   - '+.ddtaba.com'
   - '+.ddtugame.com'
@@ -25318,7 +25317,6 @@ payload:
   - '+.gongchou.com'
   - '+.gongfubb.com'
   - '+.gongheshengshi.com'
-  - '+.gongjianglaile.com'
   - '+.gongjiao.com'
   - '+.gongjiaomi.com'
   - '+.gongju.com'
@@ -26714,7 +26712,6 @@ payload:
   - '+.hamanw.com'
   - '+.hambut.com'
   - '+.hamir.net'
-  - '+.han-cang.com'
   - '+.han-tang.cc'
   - '+.han66.com'
   - '+.hanamichi.wiki'
@@ -31899,6 +31896,7 @@ payload:
   - '+.itaokecms.com'
   - '+.itaotuo.com'
   - '+.itavcn.com'
+  - '+.itazhi.com'
   - '+.itbegin.com'
   - '+.itbeihe.com'
   - '+.itbiaoju.com'
@@ -32729,6 +32727,7 @@ payload:
   - '+.jhsctv.com'
   - '+.jhsdai.com'
   - '+.jhsfojiao.com'
+  - '+.jhsjtxx.com'
   - '+.jhssapp.com'
   - '+.jht868.com'
   - '+.jhtcgroup.com'
@@ -33644,7 +33643,6 @@ payload:
   - '+.jjcto.com'
   - '+.jjdc.net'
   - '+.jjdede.com'
-  - '+.jjdf.com'
   - '+.jjdiaoyu.com'
   - '+.jjdzc.com'
   - '+.jjecn.com'
@@ -34011,7 +34009,6 @@ payload:
   - '+.joywii.net'
   - '+.joywok.com'
   - '+.joyyang.com'
-  - '+.joyyoo.com'
   - '+.joyzlan.com'
   - '+.jp-moco.com'
   - '+.jp.com'
@@ -38568,6 +38565,7 @@ payload:
   - '+.lsuoled.com'
   - '+.lsup.net'
   - '+.lsw315.com'
+  - '+.lswld.com'
   - '+.lswlsw.com'
   - '+.lsxz.org'
   - '+.lsywtc.com'
@@ -41667,6 +41665,7 @@ payload:
   - '+.mymova.com'
   - '+.mynb8.com'
   - '+.mynee.com'
+  - '+.myoas.com'
   - '+.myodatech.com'
   - '+.myoldtime.com'
   - '+.myonlystar.com'
@@ -52429,7 +52428,6 @@ payload:
   - '+.szpichappy.com'
   - '+.szpmi.org'
   - '+.szpowerpms.com'
-  - '+.szpxb.com'
   - '+.szpxe.com'
   - '+.szqcz.com'
   - '+.szqf.org'
@@ -52714,6 +52712,7 @@ payload:
   - '+.tangdouimg.com'
   - '+.tangeche.com'
   - '+.tanggu11g.com'
+  - '+.tangguoxian.com'
   - '+.tanghushi.com'
   - '+.tangide.com'
   - '+.tangjie.me'
@@ -53773,6 +53772,7 @@ payload:
   - '+.titan007.com'
   - '+.titan24.com'
   - '+.titanar.com'
+  - '+.titanmatrix.com'
   - '+.titapark.com'
   - '+.tixa.com'
   - '+.tixaapp.com'
@@ -57393,7 +57393,6 @@ payload:
   - '+.weikd.com'
   - '+.weike.fm'
   - '+.weikebaba.net'
-  - '+.weikefanli.com'
   - '+.weikeimg.com'
   - '+.weikejianghu.com'
   - '+.weikengtech.com'
@@ -61476,6 +61475,7 @@ payload:
   - '+.xsb.tw'
   - '+.xsb120.com'
   - '+.xsbiquge.com'
+  - '+.xsbnggzyjyxx.com'
   - '+.xscbs.com'
   - '+.xschu.com'
   - '+.xsdwk.com'
