--- a/directbak.yaml
+++ b/directbak.yaml
@@ -9730,6 +9730,7 @@ payload:
   - '+.artlinkart.com'
   - '+.artliving.tv'
   - '+.artlnk.com'
+  - '+.artmotions.net'
   - '+.artoolinks.com'
   - '+.artopia-group.com'
   - '+.artp.cc'
@@ -17199,6 +17200,7 @@ payload:
   - '+.cpcwe.com'
   - '+.cpdad.com'
   - '+.cpdaily.com'
+  - '+.cpdyj.com'
   - '+.cpecc.net'
   - '+.cpeol.net'
   - '+.cpgzh.com'
@@ -19448,6 +19450,7 @@ payload:
   - '+.dimeng.net'
   - '+.dimensionalzone.com'
   - '+.dimpurr.com'
+  - '+.dimsmary.tech'
   - '+.dinais.com'
   - '+.dindin.com'
   - '+.dingdanggj.com'
@@ -21200,6 +21203,7 @@ payload:
   - '+.ecombdstatic.com'
   - '+.ecomoter.com'
   - '+.ecookinn.com'
+  - '+.ecool.site'
   - '+.ecoplastech.com'
   - '+.ecoprint.tech'
   - '+.ecorr.org'
@@ -25037,6 +25041,7 @@ payload:
   - '+.global-idc.net'
   - '+.global-jf.com'
   - '+.global-scsl.com'
+  - '+.global-trade-center.com'
   - '+.globalaccentchinese.com'
   - '+.globalbuy.cc'
   - '+.globalcompressor.com'
@@ -28217,6 +28222,7 @@ payload:
   - '+.hkpep.com'
   - '+.hkproperty.com'
   - '+.hkqbh.com'
+  - '+.hkscxh.com'
   - '+.hkskyloyd.com'
   - '+.hkstv.tv'
   - '+.hkt4.com'
@@ -45373,6 +45379,7 @@ payload:
   - '+.qcy.com'
   - '+.qcymall.com'
   - '+.qcyoung.com'
+  - '+.qd-metro.com'
   - '+.qd256.com'
   - '+.qd315.net'
   - '+.qdac.cc'
@@ -53801,6 +53808,7 @@ payload:
   - '+.tlcharity.com'
   - '+.tlfjw.com'
   - '+.tlfw.net'
+  - '+.tlggzyjy.com'
   - '+.tlightsky.com'
   - '+.tlinx.com'
   - '+.tljcw.com'
@@ -55965,6 +55973,7 @@ payload:
   - '+.vertuonline.com'
   - '+.ververica.com'
   - '+.very9s.net'
+  - '+.veryapex.com'
   - '+.verybeaut.com'
   - '+.verycaca.com'
   - '+.verycd.com'
@@ -58446,6 +58455,7 @@ payload:
   - '+.wn51.com'
   - '+.wn789.com'
   - '+.wnacg.xyz'
+  - '+.wnark.com'
   - '+.wnbsq.com'
   - '+.wndhw.com'
   - '+.wndlkj.com'
@@ -62542,6 +62552,7 @@ payload:
   - '+.yeshj.com'
   - '+.yeshu.com'
   - '+.yesidos.com'
+  - '+.yesiness.com'
   - '+.yeskn.com'
   - '+.yesky.com'
   - '+.yeslib.com'
