--- a/directbak.yaml
+++ b/directbak.yaml
@@ -807,7 +807,6 @@ payload:
   - '+.100audio.com'
   - '+.100ayrc.com'
   - '+.100b.cc'
-  - '+.100ben.net'
   - '+.100bt.com'
   - '+.100chou.com'
   - '+.100chui.com'
@@ -871,7 +870,6 @@ payload:
   - '+.100xhs.com'
   - '+.100xiao.com'
   - '+.100xin.com'
-  - '+.100xs.com'
   - '+.100xuexi.com'
   - '+.100ye.net'
   - '+.100yigui.com'
@@ -2633,6 +2631,7 @@ payload:
   - '+.2chcn.com'
   - '+.2cloo.com'
   - '+.2cname.com'
+  - '+.2cor9.com'
   - '+.2cp.com'
   - '+.2cq.com'
   - '+.2cto.com'
@@ -3069,7 +3068,6 @@ payload:
   - '+.360down.com'
   - '+.360drift.com'
   - '+.360drm.com'
-  - '+.360dy.wang'
   - '+.360edu.com'
   - '+.360eet.com'
   - '+.360eol.com'
@@ -4177,6 +4175,7 @@ payload:
   - '+.51fdc.com'
   - '+.51feels.com'
   - '+.51feibao.com'
+  - '+.51findshop.com'
   - '+.51flrc.com'
   - '+.51fmzg.com'
   - '+.51fpg.com'
@@ -4480,7 +4479,6 @@ payload:
   - '+.51ukf.com'
   - '+.51uyi.com'
   - '+.51uyun.com'
-  - '+.51vba.com'
   - '+.51vhost.net'
   - '+.51vimeo.com'
   - '+.51vip.biz'
@@ -5760,7 +5758,6 @@ payload:
   - '+.676.com'
   - '+.676z.com'
   - '+.678266.com'
-  - '+.678678.com'
   - '+.6787.com'
   - '+.67876.com'
   - '+.67883.com'
@@ -6469,7 +6466,6 @@ payload:
   - '+.81761.com'
   - '+.817711.com'
   - '+.818.com'
-  - '+.81813.com'
   - '+.818it.com'
   - '+.818ps.com'
   - '+.818rmb.com'
@@ -6483,7 +6479,6 @@ payload:
   - '+.81tech.com'
   - '+.81toutiao.com'
   - '+.81tt.net'
-  - '+.81un.net'
   - '+.81xy.com'
   - '+.81yy.cc'
   - '+.81zw.co'
@@ -6491,7 +6486,6 @@ payload:
   - '+.81zw.us'
   - '+.8203app.com'
   - '+.8211.com'
-  - '+.821583.com'
   - '+.82222919.com'
   - '+.82250856.com'
   - '+.822644.com'
@@ -6994,6 +6988,7 @@ payload:
   - '+.91ddcc.com'
   - '+.91ddedu.com'
   - '+.91dena.com'
+  - '+.91diany.com'
   - '+.91dict.com'
   - '+.91display.com'
   - '+.91dnso.com'
@@ -7034,6 +7029,7 @@ payload:
   - '+.91jsj.com'
   - '+.91juice.com'
   - '+.91kami.com'
+  - '+.91kanju.com'
   - '+.91keman.com'
   - '+.91keto.com'
   - '+.91laihama.com'
@@ -7633,6 +7629,9 @@ payload:
   - '+.9duw.com'
   - '+.9dwork.com'
   - '+.9earth.com'
+  - '+.9ehao.com'
+  - '+.9eii.com'
+  - '+.9ela.com'
   - '+.9ele.com'
   - '+.9enjoy.com'
   - '+.9fav.com'
@@ -9166,6 +9165,7 @@ payload:
   - '+.anhei2.com'
   - '+.anhei3.net'
   - '+.anheng.com'
+  - '+.anhkgg.com'
   - '+.anhouse.com'
   - '+.anhuaedu.com'
   - '+.anhui365.net'
@@ -9595,6 +9595,7 @@ payload:
   - '+.appxzz.com'
   - '+.appyao.com'
   - '+.appying.com'
+  - '+.appykt.com'
   - '+.appzhonghua.com'
   - '+.appzhu.com'
   - '+.apsgo.com'
@@ -10734,6 +10735,7 @@ payload:
   - '+.bathome.net'
   - '+.batian.net'
   - '+.batmanit.com'
+  - '+.batplay.com'
   - '+.batpool.com'
   - '+.battery-cert.com'
   - '+.batterydir.com'
@@ -10875,6 +10877,7 @@ payload:
   - '+.bcmeng.com'
   - '+.bcoderss.com'
   - '+.bcpcn.com'
+  - '+.bcrealm.com'
   - '+.bcreat.com'
   - '+.bcrjl.com'
   - '+.bcsec.org'
@@ -11768,7 +11771,6 @@ payload:
   - '+.bjadn.net'
   - '+.bjaodidazhong.com'
   - '+.bjatv.com'
-  - '+.bjbaidu88.com'
   - '+.bjbaodao.net'
   - '+.bjbeifangjx.com'
   - '+.bjbkh.net'
@@ -12877,6 +12879,7 @@ payload:
   - '+.bytednsdoc.com'
   - '+.byteedu.com'
   - '+.byteeffecttos.com'
+  - '+.bytefae.com'
   - '+.bytefcdn.com'
   - '+.bytegecko.com'
   - '+.bytegoofy.com'
@@ -13271,6 +13274,7 @@ payload:
   - '+.caohua.com'
   - '+.caomeibook.com'
   - '+.caomeishuma.com'
+  - '+.caomeixz10.xyz'
   - '+.caomin5168.com'
   - '+.caotama.com'
   - '+.caoxianfc.com'
@@ -13390,6 +13394,7 @@ payload:
   - '+.cbfook.com'
   - '+.cbgcloud.com'
   - '+.cbi360.net'
+  - '+.cbi88.com'
   - '+.cbice.com'
   - '+.cbide.com'
   - '+.cbiec.com'
@@ -13543,6 +13548,7 @@ payload:
   - '+.ccme.cc'
   - '+.ccmfcm.com'
   - '+.ccmmcode.com'
+  - '+.ccmnn.com'
   - '+.ccmodel.com'
   - '+.ccmodel.net'
   - '+.ccmw.net'
@@ -14047,6 +14053,7 @@ payload:
   - '+.cfbond.com'
   - '+.cfc365.com'
   - '+.cfca-c.org'
+  - '+.cfcdn.org'
   - '+.cfcdn.site'
   - '+.cfcglx.com'
   - '+.cfcp67.com'
@@ -15587,7 +15594,6 @@ payload:
   - '+.chuanqi.com'
   - '+.chuanqian999.com'
   - '+.chuanshanqundao.com'
-  - '+.chuansong.me'
   - '+.chuansongme.com'
   - '+.chuantec.com'
   - '+.chuantou.org'
@@ -16097,6 +16103,7 @@ payload:
   - '+.cmb-leasing.com'
   - '+.cmbajia.com'
   - '+.cmbbao.com'
+  - '+.cmbchina.biz'
   - '+.cmbchina.com'
   - '+.cmbchina.net'
   - '+.cmbimg.com'
@@ -16164,6 +16171,7 @@ payload:
   - '+.cmskcrm.com'
   - '+.cmsky.com'
   - '+.cmsn.biz'
+  - '+.cmspapp77.com'
   - '+.cmstop.com'
   - '+.cmswj.com'
   - '+.cmsyuanma.com'
@@ -16630,6 +16638,7 @@ payload:
   - '+.cnpatent.com'
   - '+.cnpc-hy.com'
   - '+.cnpenjing.com'
+  - '+.cnpereading.com'
   - '+.cnpet.cc'
   - '+.cnpghouse.com'
   - '+.cnphar.net'
@@ -16881,7 +16890,6 @@ payload:
   - '+.codelover.link'
   - '+.codemany.com'
   - '+.codemart.com'
-  - '+.codemcx.work'
   - '+.codemm.net'
   - '+.codeok.com'
   - '+.codepiano.com'
@@ -17135,6 +17143,7 @@ payload:
   - '+.coovbbs.com'
   - '+.coovee.com'
   - '+.coovee.net'
+  - '+.cooxs.com'
   - '+.coozhi.com'
   - '+.cop.cdnetworks.com'
   - '+.copyan.com'
@@ -17250,7 +17259,6 @@ payload:
   - '+.cpython.org'
   - '+.cq-wnl.com'
   - '+.cq.cm'
-  - '+.cq315.org'
   - '+.cq315house.com'
   - '+.cq3a.com'
   - '+.cq5135.com'
@@ -17502,6 +17510,7 @@ payload:
   - '+.crsky.com'
   - '+.crsn168.com'
   - '+.crvic.org'
+  - '+.crxdl.com'
   - '+.cryptape.com'
   - '+.crystalcg.com'
   - '+.crystaledu.com'
@@ -17593,6 +17602,7 @@ payload:
   - '+.cslyrc.com'
   - '+.csmall.com'
   - '+.csmama.net'
+  - '+.csmar.com'
   - '+.csmbcx.com'
   - '+.csmc-cloud.com'
   - '+.csmscon.com'
@@ -19290,6 +19300,7 @@ payload:
   - '+.dianshanghy.com'
   - '+.dianshangyi.com'
   - '+.dianshi.com'
+  - '+.dianshige.com'
   - '+.dianshihome.com'
   - '+.dianshijia.com'
   - '+.dianshimo.com'
@@ -19572,7 +19583,6 @@ payload:
   - '+.diyiredian.com'
   - '+.diyishijian.com'
   - '+.diyitech.com'
-  - '+.diyitui.com'
   - '+.diyiwl.wang'
   - '+.diyixiazai.com'
   - '+.diyixitong.com'
@@ -19934,6 +19944,7 @@ payload:
   - '+.doglobal.net'
   - '+.dogmr.com'
   - '+.dogwhere.com'
+  - '+.dogyun.com'
   - '+.doh.pub'
   - '+.dohuo.com'
   - '+.doido.com'
@@ -20579,7 +20590,6 @@ payload:
   - '+.duouoo.com'
   - '+.duowan.com'
   - '+.duowanns.com'
-  - '+.duoxiaoshi.com'
   - '+.duoxinqi.com'
   - '+.duoxj.com'
   - '+.duoyewu.com'
@@ -20696,7 +20706,6 @@ payload:
   - '+.dxpei.com'
   - '+.dxpmedia.com'
   - '+.dxqyy.com'
-  - '+.dxqzsw.com'
   - '+.dxrc.com'
   - '+.dxs96.com'
   - '+.dxsaxw.com'
@@ -20784,7 +20793,6 @@ payload:
   - '+.dyxw.com'
   - '+.dyxz.la'
   - '+.dyydy.com'
-  - '+.dyyhlp.com'
   - '+.dyymwy.com'
   - '+.dyynong.net'
   - '+.dyys.com'
@@ -21122,7 +21130,6 @@ payload:
   - '+.ebtang.com'
   - '+.ebtrust.com'
   - '+.ebuckler.com'
-  - '+.ebulks.com'
   - '+.ebuy31.com'
   - '+.ebways.com'
   - '+.ec-ae.com'
@@ -21616,7 +21623,6 @@ payload:
   - '+.ellemen.com'
   - '+.elliotxing.com'
   - '+.ellll.com'
-  - '+.elmagnifico.tech'
   - '+.elmerlxy.com'
   - '+.eloancn.com'
   - '+.elong-edm.com'
@@ -21953,7 +21959,6 @@ payload:
   - '+.esoboy.com'
   - '+.eson.org'
   - '+.esoo.org'
-  - '+.esoogle.com'
   - '+.esouou.com'
   - '+.esouti.com'
   - '+.esoyu.com'
@@ -23305,7 +23310,6 @@ payload:
   - '+.fkdxg.com'
   - '+.fkesfg.com'
   - '+.fkjie.com'
-  - '+.fktong.com'
   - '+.fkw.com'
   - '+.fkw100.com'
   - '+.fkxs.net'
@@ -23732,6 +23736,7 @@ payload:
   - '+.fsmy88888.com'
   - '+.fsoptronics.com'
   - '+.fspage.com'
+  - '+.fspbg.com'
   - '+.fspcdn.com'
   - '+.fsq3626.com'
   - '+.fssfs.com'
@@ -23935,6 +23940,7 @@ payload:
   - '+.fwdq.com'
   - '+.fwdq.net'
   - '+.fwdqw.com'
+  - '+.fwhzxxgbyy.com'
   - '+.fwjia.com'
   - '+.fwmob.com'
   - '+.fwqbdn.com'
@@ -24337,6 +24343,7 @@ payload:
   - '+.gaoqing.fm'
   - '+.gaoqing.la'
   - '+.gaoqing500.com'
+  - '+.gaoqingdianshi.com'
   - '+.gaoqingpai.com'
   - '+.gaoqiwenda.com'
   - '+.gaoqixhb.com'
@@ -24598,9 +24605,7 @@ payload:
   - '+.gedoumi.com'
   - '+.gedu.org'
   - '+.geeboo.com'
-  - '+.geeboodata.com'
   - '+.geebook.com'
-  - '+.geebookservice.com'
   - '+.geedai.com'
   - '+.geedu.com'
   - '+.geeetech.com'
@@ -25052,6 +25057,7 @@ payload:
   - '+.globalmil.com'
   - '+.globalpingbao.com'
   - '+.globalscanner.com'
+  - '+.globalslb.net'
   - '+.globalsources.com'
   - '+.globalstech.com'
   - '+.globeauto.org'
@@ -25558,7 +25564,6 @@ payload:
   - '+.gretf.com'
   - '+.greycdn.net'
   - '+.greyli.com'
-  - '+.greytech.org'
   - '+.grfy.net'
   - '+.grfyw.com'
   - '+.grg2013.com'
@@ -26726,6 +26731,7 @@ payload:
   - '+.hanjudao.com'
   - '+.hanjutiantang.com'
   - '+.hanjutv.com'
+  - '+.hanjutvaa.com'
   - '+.hankeer.org'
   - '+.hankewins.com'
   - '+.hanking.com'
@@ -27095,7 +27101,6 @@ payload:
   - '+.haroldrandom.me'
   - '+.harrynull.tech'
   - '+.harrypottermagicawakened.com'
-  - '+.harttle.land'
   - '+.harvestcm.com'
   - '+.harvestpawn.com'
   - '+.hasea.com'
@@ -27114,6 +27119,7 @@ payload:
   - '+.hatm.vip'
   - '+.hatoem.com'
   - '+.haval-global.com'
+  - '+.have.ink'
   - '+.havefun.im'
   - '+.hawbel.com'
   - '+.hax18.com'
@@ -27888,7 +27894,6 @@ payload:
   - '+.hgfdcscxx.com'
   - '+.hgfdrf.com'
   - '+.hghhh.com'
-  - '+.hghmxdjy.com'
   - '+.hgimage.com'
   - '+.hgitv.com'
   - '+.hgjart.com'
@@ -28702,6 +28707,7 @@ payload:
   - '+.hottechsemi.com'
   - '+.hottui.com'
   - '+.hotwind.net'
+  - '+.hotwindbox.com'
   - '+.houbank.com'
   - '+.houcaller.com'
   - '+.houdao.net'
@@ -29297,7 +29303,6 @@ payload:
   - '+.huayimedia.com'
   - '+.huayiming.com'
   - '+.huayinjapan.com'
-  - '+.huayinziben.com'
   - '+.huayiwork.com'
   - '+.huayoumengze.com'
   - '+.huayoutianyu.com'
@@ -29517,7 +29522,6 @@ payload:
   - '+.huizhijiaxun.com'
   - '+.huizhimob.com'
   - '+.huizhonghengxing.com'
-  - '+.huizhongkameng.com'
   - '+.huizhouf.com'
   - '+.huiziyuan.net'
   - '+.huizuche.com'
@@ -29837,7 +29841,6 @@ payload:
   - '+.hxqnj.org'
   - '+.hxqwx.com'
   - '+.hxrc.com'
-  - '+.hxrdr.com'
   - '+.hxs168.com'
   - '+.hxsd.com'
   - '+.hxsd.tv'
@@ -30550,6 +30553,7 @@ payload:
   - '+.idianfa.com'
   - '+.idianshijia.com'
   - '+.idig8.com'
+  - '+.idigi.net'
   - '+.idkaiu.com'
   - '+.idler-et.com'
   - '+.idmchina.net'
@@ -34945,7 +34949,6 @@ payload:
   - '+.kanghu.net'
   - '+.kanghuayun.com'
   - '+.kanghui.com'
-  - '+.kanghui.org'
   - '+.kanghuwang.com'
   - '+.kangkang.work'
   - '+.kanglaohui.com'
@@ -35463,6 +35466,7 @@ payload:
   - '+.kischess.com'
   - '+.kisdee.com'
   - '+.kiss688.com'
+  - '+.kisskisso.com'
   - '+.kissyui.com'
   - '+.kiswo.com'
   - '+.kit-lee.me'
@@ -35685,7 +35689,6 @@ payload:
   - '+.konggu.net'
   - '+.kongjianjia.com'
   - '+.kongjie.com'
-  - '+.kongjun.cc'
   - '+.kongjun.com'
   - '+.konglei.com'
   - '+.kongming-inc.com'
@@ -36221,6 +36224,7 @@ payload:
   - '+.kxewpz.com'
   - '+.kxfsw.com'
   - '+.kxgcw.com'
+  - '+.kxgdyw.com'
   - '+.kxiaoshuo77.com'
   - '+.kxinyk.com'
   - '+.kxji.com'
@@ -37390,6 +37394,7 @@ payload:
   - '+.life365.com'
   - '+.lifeall.com'
   - '+.lifeeu.com'
+  - '+.lifegatemedicine.com'
   - '+.lifeibo.com'
   - '+.lifeng.in'
   - '+.lifeng.net'
@@ -37706,7 +37711,6 @@ payload:
   - '+.lipin010.com'
   - '+.lipinduihuan.com'
   - '+.lippt.com'
-  - '+.liqiang999.com'
   - '+.liqihuoke.com'
   - '+.liqijt.com'
   - '+.liqile.com'
@@ -37807,6 +37811,7 @@ payload:
   - '+.liuliangjie.com'
   - '+.liulianglf.com'
   - '+.liuliangzu.com'
+  - '+.liulianqi123.com'
   - '+.liulianyu.com'
   - '+.liuliguo.com'
   - '+.liulin.cc'
@@ -38046,7 +38051,6 @@ payload:
   - '+.lmyd5.com'
   - '+.lmyjsq.com'
   - '+.lnamphp.com'
-  - '+.lncld.net'
   - '+.lncldapi.com'
   - '+.lncnw.com'
   - '+.lndao.com'
@@ -40163,7 +40167,6 @@ payload:
   - '+.mianhuatang.cc'
   - '+.mianhuatang.la'
   - '+.mianjue.com'
-  - '+.mianjupark.com'
   - '+.mianjuvip.com'
   - '+.mianshi365.com'
   - '+.mianshui365.com'
@@ -40287,7 +40290,6 @@ payload:
   - '+.mifengzhibo.com'
   - '+.mifispark.com'
   - '+.migame.vip'
-  - '+.migantech.com'
   - '+.migelab.com'
   - '+.migroom.com'
   - '+.migucloud.com'
@@ -40712,6 +40714,7 @@ payload:
   - '+.mmwan.cc'
   - '+.mmww.com'
   - '+.mmxiaowu.com'
+  - '+.mmy.la'
   - '+.mmybt.com'
   - '+.mmycdn.com'
   - '+.mmyfilm.com'
@@ -41162,11 +41165,9 @@ payload:
   - '+.ms211.com'
   - '+.ms315.com'
   - '+.ms6666111.com'
-  - '+.msc1434.com'
   - '+.mscbsc.com'
   - '+.mschcdn.com'
   - '+.mscto.com'
-  - '+.mscxw.com'
   - '+.msddp.com'
   - '+.msdelectron.com'
   - '+.msfpay.com'
@@ -41974,6 +41975,7 @@ payload:
   - '+.nd68.com'
   - '+.nddaily.com'
   - '+.nddnrm.com'
+  - '+.ndfsl.com'
   - '+.ndh21.com'
   - '+.ndhys.com'
   - '+.ndmh.com'
@@ -42345,7 +42347,6 @@ payload:
   - '+.ningbocat.com'
   - '+.ningbofy.com'
   - '+.ningbotm.net'
-  - '+.ningboys.com'
   - '+.ningdo.com'
   - '+.ninghao.net'
   - '+.ningidc.com'
@@ -42451,7 +42452,6 @@ payload:
   - '+.njcgs.com'
   - '+.njcitygas.com'
   - '+.njctkj.com'
-  - '+.njcto.com'
   - '+.njcw.com'
   - '+.njd1.com'
   - '+.njdapaidang.com'
@@ -42733,7 +42733,6 @@ payload:
   - '+.ns8d.com'
   - '+.ns96.com'
   - '+.nsbeta.info'
-  - '+.nsbsun3388.com'
   - '+.nscloudwaf.com'
   - '+.nscscc.org'
   - '+.nseac.com'
@@ -44392,7 +44391,6 @@ payload:
   - '+.piaozhilan.com'
   - '+.piaozone.com'
   - '+.piasy.com'
-  - '+.pibaosi.net'
   - '+.pic138.com'
   - '+.pic16.com'
   - '+.pic21.com'
@@ -44556,6 +44554,7 @@ payload:
   - '+.pipipifa.com'
   - '+.pipiti.com'
   - '+.pipix.com'
+  - '+.pipiyys.com'
   - '+.pipsemi.com'
   - '+.piqs.com'
   - '+.pisx.com'
@@ -44672,7 +44671,6 @@ payload:
   - '+.plexjiasuqi.com'
   - '+.plob.org'
   - '+.plotcup.com'
-  - '+.plpeng.xin'
   - '+.plqdf.com'
   - '+.plsmspx.com'
   - '+.plsub.com'
@@ -46768,6 +46766,7 @@ payload:
   - '+.qwpo2018.com'
   - '+.qwpr3.com'
   - '+.qwpr38.com'
+  - '+.qwq.moe'
   - '+.qwqk.net'
   - '+.qwqoffice.com'
   - '+.qwspcz.com'
@@ -46861,7 +46860,6 @@ payload:
   - '+.qz96811.com'
   - '+.qzbbs.com'
   - '+.qzbigstone.com'
-  - '+.qzbocheng.com'
   - '+.qzbonline.com'
   - '+.qzbuxi.com'
   - '+.qzccbank.com'
@@ -47018,6 +47016,7 @@ payload:
   - '+.razrlele.com'
   - '+.raztb.com'
   - '+.rb400.com'
+  - '+.rbcty.com'
   - '+.rbischina.org'
   - '+.rbqq.com'
   - '+.rbyair.com'
@@ -47633,6 +47632,7 @@ payload:
   - '+.rrjc.com'
   - '+.rrjump.com'
   - '+.rrkf.com'
+  - '+.rrkvip.com'
   - '+.rrky.com'
   - '+.rrkyw.com'
   - '+.rrl360.com'
@@ -48143,7 +48143,6 @@ payload:
   - '+.sbanfu.com'
   - '+.sbanzu.com'
   - '+.sbc-mcc.com'
-  - '+.sbc1434.com'
   - '+.sbc398.com'
   - '+.sbc665.com'
   - '+.sbeira.com'
@@ -49080,6 +49079,7 @@ payload:
   - '+.sharewithu.com'
   - '+.sharing-water.com'
   - '+.sharkselection.com'
+  - '+.sharonroalind.com'
   - '+.sharpbai.com'
   - '+.shartu.com'
   - '+.shawdo.com'
@@ -50159,7 +50159,6 @@ payload:
   - '+.singread.com'
   - '+.singtaonet.com'
   - '+.sinmeng.com'
-  - '+.sinmv.com'
   - '+.sino-corrugated.com'
   - '+.sino-cr.com'
   - '+.sino-flexography.com'
@@ -53051,7 +53050,6 @@ payload:
   - '+.tejiaquan.com'
   - '+.tejiawang.com'
   - '+.tektea.com'
-  - '+.tel7777777.com'
   - '+.telaideyouxue.com'
   - '+.teld.net'
   - '+.telefen.com'
@@ -53746,6 +53744,7 @@ payload:
   - '+.tjsjnxh.com'
   - '+.tjst.net'
   - '+.tjstats.com'
+  - '+.tjtdhyfs.com'
   - '+.tjtzkj.com'
   - '+.tjufbase.com'
   - '+.tjupdi.com'
@@ -53784,6 +53783,7 @@ payload:
   - '+.tkplusemi.com'
   - '+.tkw.cc'
   - '+.tkxxd.net'
+  - '+.tkxzw.com'
   - '+.tky001.com'
   - '+.tl-self.com'
   - '+.tl-shida.com'
@@ -54879,6 +54879,7 @@ payload:
   - '+.txbimg.com'
   - '+.txcbwgg.com'
   - '+.txcdns.com'
+  - '+.txcsjlb.com'
   - '+.txdai.com'
   - '+.txdy01.com'
   - '+.txdzs.com'
@@ -56095,6 +56096,7 @@ payload:
   - '+.vip-wifi.com'
   - '+.vip.com'
   - '+.vip120.com'
+  - '+.vip1280.net'
   - '+.vip150.com'
   - '+.vip800.com'
   - '+.vip8849.com'
@@ -56928,6 +56930,7 @@ payload:
   - '+.warstudy.com'
   - '+.warsu.com'
   - '+.warting.com'
+  - '+.warwickintl.com'
   - '+.was-expo.com'
   - '+.wasair.com'
   - '+.washpayer.com'
@@ -58404,7 +58407,6 @@ payload:
   - '+.wmcloud.com'
   - '+.wmcn.com'
   - '+.wmedias.com'
-  - '+.wmgjd.com'
   - '+.wmiao.com'
   - '+.wmiyx.com'
   - '+.wmjk.net'
@@ -58748,6 +58750,7 @@ payload:
   - '+.wpsmail.net'
   - '+.wpsoffice.com'
   - '+.wptao.com'
+  - '+.wptrn.com'
   - '+.wpweixin.com'
   - '+.wpxap.com'
   - '+.wpyou.com'
@@ -61098,7 +61101,6 @@ payload:
   - '+.xlrocket.com'
   - '+.xlsemi.com'
   - '+.xlshou.com'
-  - '+.xltkwj.com'
   - '+.xltrip.com'
   - '+.xltzgy.com'
   - '+.xluos.com'
@@ -63232,7 +63234,6 @@ payload:
   - '+.yiyaha.com'
   - '+.yiyakq.com'
   - '+.yiyanche.com'
-  - '+.yiyanfen.com'
   - '+.yiyangidc.com'
   - '+.yiyaojd.com'
   - '+.yiyaojie.com'
@@ -63673,6 +63674,7 @@ payload:
   - '+.youdaili.net'
   - '+.youdaiw.com'
   - '+.youdajx.com'
+  - '+.youdanhui.com'
   - '+.youdao.com'
   - '+.youdaojr.com'
   - '+.youdaolvshi.com'
@@ -63709,7 +63711,6 @@ payload:
   - '+.youhaosoft.com'
   - '+.youhaosuda.com'
   - '+.youhro.com'
-  - '+.youhu.com'
   - '+.youhua.com'
   - '+.youhuaaa.com'
   - '+.youhuafuzhi.com'
@@ -64203,6 +64204,7 @@ payload:
   - '+.yuanfudao.com'
   - '+.yuanfudao.ws'
   - '+.yuangongbao.com'
+  - '+.yuanhaitaiji.com'
   - '+.yuanhuikai.com'
   - '+.yuaniis.com'
   - '+.yuanjie.org'
@@ -64998,7 +65000,6 @@ payload:
   - '+.yzgjgs.com'
   - '+.yzgnet.com'
   - '+.yzgttm.com'
-  - '+.yzgzgd.com'
   - '+.yzhbw.net'
   - '+.yzhli.com'
   - '+.yzhtidc.com'
@@ -65071,7 +65072,6 @@ payload:
   - '+.zaidudu.net'
   - '+.zaiduu.com'
   - '+.zaih.com'
-  - '+.zaihua.me'
   - '+.zaihuangshi.com'
   - '+.zaijia.com'
   - '+.zaijiawan.com'
@@ -65552,6 +65552,7 @@ payload:
   - '+.zgui.com'
   - '+.zguonew.com'
   - '+.zgw.com'
+  - '+.zgwangzhan.com'
   - '+.zgweimeng.com'
   - '+.zgwenku.com'
   - '+.zgwgfw.com'
@@ -66041,6 +66042,7 @@ payload:
   - '+.zhijuke.com'
   - '+.zhikao100.com'
   - '+.zhiketong.com'
+  - '+.zhiketong.net'
   - '+.zhikubao.net'
   - '+.zhilandaren.com'
   - '+.zhilehuo.com'
@@ -67789,7 +67791,6 @@ payload:
   - '+.zz-news.com'
   - '+.zz-qq.com'
   - '+.zz-zigzag.com'
-  - '+.zz04.net'
   - '+.zz21.com'
   - '+.zz314.com'
   - '+.zz618.com'
@@ -67842,6 +67843,7 @@ payload:
   - '+.zzliot.com'
   - '+.zzllq.com'
   - '+.zzloop.com'
+  - '+.zzlz.net'
   - '+.zzm8.com'
   - '+.zzmama.net'
   - '+.zzmscg.com'
