--- a/directbak.yaml
+++ b/directbak.yaml
@@ -344,7 +344,6 @@ payload:
   - '+.0411e.com'
   - '+.0411hd.com'
   - '+.041234b.com'
-  - '+.0416u.com'
   - '+.0417gou.com'
   - '+.0421wcbzk.com'
   - '+.0427.com'
@@ -1290,6 +1289,7 @@ payload:
   - '+.13400.com'
   - '+.13482896776.com'
   - '+.135-139.com'
+  - '+.135019.com'
   - '+.135031.com'
   - '+.1351.com'
   - '+.135309.com'
@@ -1872,6 +1872,7 @@ payload:
   - '+.18yl.com'
   - '+.18zg.com'
   - '+.18zhuanqian.com'
+  - '+.18zw.com'
   - '+.1905.com'
   - '+.1905kk.com'
   - '+.190757.com'
@@ -3827,7 +3828,6 @@ payload:
   - '+.497.com'
   - '+.498.net'
   - '+.499-img.com'
-  - '+.49914.com'
   - '+.49app.com'
   - '+.49pic.com'
   - '+.49wanwan.com'
@@ -4461,6 +4461,7 @@ payload:
   - '+.51tour.com'
   - '+.51touxiang.com'
   - '+.51tra.com'
+  - '+.51tracking.com'
   - '+.51ttxue.com'
   - '+.51tuiyi.com'
   - '+.51tunhuo.com'
@@ -4500,7 +4501,6 @@ payload:
   - '+.51world.win'
   - '+.51wp.com'
   - '+.51wtp.com'
-  - '+.51wuduan.com'
   - '+.51wxjz.com'
   - '+.51wydj.com'
   - '+.51wyfl.com'
@@ -4671,6 +4671,7 @@ payload:
   - '+.5277.com'
   - '+.527meeting.com'
   - '+.527pk.com'
+  - '+.527u.com'
   - '+.5281.com'
   - '+.52841819.com'
   - '+.528500.com'
@@ -4861,7 +4862,6 @@ payload:
   - '+.52wendang.com'
   - '+.52wlw.com'
   - '+.52wmb.com'
-  - '+.52wooolpk.com'
   - '+.52wubi.com'
   - '+.52xiaomian.com'
   - '+.52xiaoshuowang.com'
@@ -5643,6 +5643,7 @@ payload:
   - '+.655u.com'
   - '+.655yx.com'
   - '+.656463.com'
+  - '+.65688qp.com'
   - '+.65875.com'
   - '+.659595.com'
   - '+.65house.com'
@@ -5705,7 +5706,6 @@ payload:
   - '+.669pic.com'
   - '+.669play.com'
   - '+.669ye.com'
-  - '+.66aliyun.com'
   - '+.66beian.com'
   - '+.66call.com'
   - '+.66cn.com'
@@ -6081,7 +6081,6 @@ payload:
   - '+.76676.com'
   - '+.766z.com'
   - '+.7676.com'
-  - '+.7676u.com'
   - '+.7677wan.com'
   - '+.767stock.com'
   - '+.76868.com'
@@ -7838,7 +7837,6 @@ payload:
   - '+.abe-tech.com'
   - '+.abeacon.com'
   - '+.abecage.com'
-  - '+.abiaogw.com'
   - '+.abiechina.com'
   - '+.abiestem.com'
   - '+.abifsey.com'
@@ -8467,6 +8465,7 @@ payload:
   - '+.aikf.com'
   - '+.aikucun.com'
   - '+.ailaba.org'
+  - '+.ailbaba.me'
   - '+.aileleba.com'
   - '+.ailete.com'
   - '+.ailewan.com'
@@ -11212,7 +11211,6 @@ payload:
   - '+.bestweshop.com'
   - '+.bestzone.org'
   - '+.bet007.com'
-  - '+.betacat.io'
   - '+.betaflare.com'
   - '+.betaidc.com'
   - '+.betajy.com'
@@ -11474,7 +11472,6 @@ payload:
   - '+.bilibiliyoo.com'
   - '+.bilicdn1.com'
   - '+.bilicdn2.com'
-  - '+.bilicraft.com'
   - '+.biligame.com'
   - '+.biligame.net'
   - '+.bilihot.com'
@@ -12929,7 +12926,6 @@ payload:
   - '+.bzshw.com'
   - '+.bzsoso.com'
   - '+.bzw315.com'
-  - '+.bzwt1.cc'
   - '+.bzxinganghulan.com'
   - '+.bzxinwen.com'
   - '+.bzxz.net'
@@ -15751,7 +15747,6 @@ payload:
   - '+.ciif-expo.com'
   - '+.ciiip.com'
   - '+.ciimg.com'
-  - '+.cijian.us'
   - '+.cijilu.com'
   - '+.ciku5.com'
   - '+.cili001.com'
@@ -16962,7 +16957,6 @@ payload:
   - '+.cokll.com'
   - '+.col.ink'
   - '+.colabug.com'
-  - '+.colachan.com'
   - '+.coladrive.com'
   - '+.colafile.com'
   - '+.colahotpot.com'
@@ -17905,7 +17899,6 @@ payload:
   - '+.cxwt113.com'
   - '+.cxwwhyc.com'
   - '+.cxxjs.com'
-  - '+.cxxwnews.com'
   - '+.cxy61.com'
   - '+.cxy7.com'
   - '+.cxybl.com'
@@ -19193,8 +19186,6 @@ payload:
   - '+.dhrest.com'
   - '+.dht5867.com'
   - '+.dhwooden.com'
-  - '+.dhy559999.com'
-  - '+.dhy85888.com'
   - '+.dhygw20.com'
   - '+.dhygw2999.com'
   - '+.dhygw488.com'
@@ -19329,7 +19320,6 @@ payload:
   - '+.diaoding.biz'
   - '+.diaojiang.com'
   - '+.diaokeji.net'
-  - '+.diaorui.net'
   - '+.diaosi.net'
   - '+.diaosiweb.net'
   - '+.diaosu9.com'
@@ -19952,6 +19942,7 @@ payload:
   - '+.domaingz.com'
   - '+.domarketing.org'
   - '+.domengle.com'
+  - '+.dominoh.com'
   - '+.domobcdn.com'
   - '+.domobnetwork.com'
   - '+.domolo.com'
@@ -19990,7 +19981,6 @@ payload:
   - '+.dongfangfuli.com'
   - '+.dongfangnews.com'
   - '+.dongfangtech.net'
-  - '+.dongfangweiting.com'
   - '+.dongfeng-honda-elysion.com'
   - '+.dongfeng-honda-gienia.com'
   - '+.dongfeng-honda-greiz.com'
@@ -20090,6 +20080,7 @@ payload:
   - '+.doteck.com'
   - '+.dotgate.com'
   - '+.dotinapp.com'
+  - '+.dotty-china.com'
   - '+.dou.bz'
   - '+.dou.li'
   - '+.douban.co'
@@ -20563,7 +20554,6 @@ payload:
   - '+.duosai.com'
   - '+.duose.com'
   - '+.duosenfashion.com'
-  - '+.duoshou7.com'
   - '+.duoshoubang.com'
   - '+.duoshuo.com'
   - '+.duososo.com'
@@ -21137,6 +21127,7 @@ payload:
   - '+.ecbcamp.com'
   - '+.ecboo.com'
   - '+.eccang.com'
+  - '+.eccbb.com'
   - '+.eccc-china.com'
   - '+.eccdnx.com'
   - '+.eccn.com'
@@ -22390,6 +22381,8 @@ payload:
   - '+.faidns.com'
   - '+.faioo.com'
   - '+.faipod.com'
+  - '+.fairguard.net'
+  - '+.fairguard.tech'
   - '+.fairyever.com'
   - '+.fairygui.com'
   - '+.fairysoftware.com'
@@ -24261,6 +24254,7 @@ payload:
   - '+.gansuyunshi.com'
   - '+.ganxi666.com'
   - '+.ganxianw.com'
+  - '+.ganxianzhi.win'
   - '+.ganzhe.com'
   - '+.ganzhishi.com'
   - '+.gao.com'
@@ -24327,7 +24321,6 @@ payload:
   - '+.gaopeng.com'
   - '+.gaoqing.fm'
   - '+.gaoqing.la'
-  - '+.gaoqing500.com'
   - '+.gaoqingdianshi.com'
   - '+.gaoqingpai.com'
   - '+.gaoqiwenda.com'
@@ -24570,7 +24563,6 @@ payload:
   - '+.gdzsxx.com'
   - '+.gdztck.com'
   - '+.gdzuoxie.com'
-  - '+.gdzxtm.com'
   - '+.gdzzz.com'
   - '+.ge-garden.net'
   - '+.ge100.com'
@@ -25013,6 +25005,7 @@ payload:
   - '+.glgoo.com'
   - '+.glgoo.net'
   - '+.glgoo.org'
+  - '+.glhospital.com'
   - '+.glike.me'
   - '+.glinfo.com'
   - '+.gljrkj.com'
@@ -26169,7 +26162,6 @@ payload:
   - '+.gz007.net'
   - '+.gz121.com'
   - '+.gz12301.com'
-  - '+.gz12333.com'
   - '+.gz300.com'
   - '+.gz360.com'
   - '+.gz4399.com'
@@ -26577,7 +26569,6 @@ payload:
   - '+.haitaoqq.com'
   - '+.haitaoshen.com'
   - '+.haitaotong.com'
-  - '+.haitaoyunfei.com'
   - '+.haitaozu.org'
   - '+.haitianhome.com'
   - '+.haitl.com'
@@ -27922,7 +27913,6 @@ payload:
   - '+.hhrdc.com'
   - '+.hhrhl.vip'
   - '+.hhrtu.com'
-  - '+.hhtdd.com'
   - '+.hhtravel.com'
   - '+.hhvv.com'
   - '+.hhxdkj.com'
@@ -28016,7 +28006,6 @@ payload:
   - '+.hiing.net'
   - '+.hijiaoshi.com'
   - '+.hijoys.com'
-  - '+.hik-er.com'
   - '+.hikailink.com'
   - '+.hikcreate.com'
   - '+.hiklife.com'
@@ -28381,6 +28370,7 @@ payload:
   - '+.hnlzw.net'
   - '+.hnmdtv.com'
   - '+.hnmgjr.com'
+  - '+.hnmj.vip'
   - '+.hnmsw.com'
   - '+.hnmuseum.com'
   - '+.hnnx.com'
@@ -29041,7 +29031,6 @@ payload:
   - '+.huada120.com'
   - '+.huadan.com'
   - '+.huadehyd.com'
-  - '+.huadezhuo.com'
   - '+.huadiandanbao.com'
   - '+.huadonghospital.com'
   - '+.huadongmedia.com'
@@ -30359,7 +30348,6 @@ payload:
   - '+.icicicic.com'
   - '+.icifit.com'
   - '+.icignacmb.com'
-  - '+.icinephile.com'
   - '+.icinfo.net'
   - '+.icirculation.com'
   - '+.icitymobile.com'
@@ -31588,7 +31576,6 @@ payload:
   - '+.iq123.com'
   - '+.iqalliance.org'
   - '+.iqcrj.com'
-  - '+.iqdedu.com'
   - '+.iqdii.com'
   - '+.iqdnet.com'
   - '+.iqianbang.com'
@@ -33504,7 +33491,6 @@ payload:
   - '+.jiwudai.com'
   - '+.jixiangbaiwei.com'
   - '+.jixiangjili.com'
-  - '+.jixiangniutanrou.net'
   - '+.jixiangyou.com'
   - '+.jixianku.com'
   - '+.jixie100.net'
@@ -34774,7 +34760,6 @@ payload:
   - '+.k3887.com'
   - '+.k4nz.com'
   - '+.k518.com'
-  - '+.k5d.net'
   - '+.k6271.com'
   - '+.k666.com'
   - '+.k6uk.com'
@@ -34829,7 +34814,6 @@ payload:
   - '+.kaifuzq.com'
   - '+.kaige68.com'
   - '+.kaihei.co'
-  - '+.kaihu.la'
   - '+.kaihui.com'
   - '+.kaihuia.com'
   - '+.kaijia.com'
@@ -35499,6 +35483,7 @@ payload:
   - '+.kk50.com'
   - '+.kk7b.com'
   - '+.kkapp.com'
+  - '+.kkbuyu8.com'
   - '+.kkcache.com'
   - '+.kkcache.net'
   - '+.kkcaicai.com'
@@ -36363,7 +36348,6 @@ payload:
   - '+.laiyinpai.com'
   - '+.laiyoushu.com'
   - '+.laiyouxi.com'
-  - '+.laiyunzhou.com'
   - '+.laizee.com'
   - '+.laizhouba.net'
   - '+.laizhuan.com'
@@ -36557,6 +36541,7 @@ payload:
   - '+.laogu.cc'
   - '+.laogu.com'
   - '+.laogu.wang'
+  - '+.laogumincj.com'
   - '+.laohanzong.com'
   - '+.laohanzong1.com'
   - '+.laohe360.net'
@@ -37994,6 +37979,7 @@ payload:
   - '+.lm335.com'
   - '+.lm343.com'
   - '+.lm685.com'
+  - '+.lm811.com'
   - '+.lm832.com'
   - '+.lm865.com'
   - '+.lm995.com'
@@ -38088,7 +38074,6 @@ payload:
   - '+.logi-inno.com'
   - '+.logicdsp.com'
   - '+.login.cdnetworks.com'
-  - '+.logisticsy.com'
   - '+.logo-emblem.com'
   - '+.logo123.net'
   - '+.logo33.com'
@@ -38882,11 +38867,11 @@ payload:
   - '+.lyhero.com'
   - '+.lyhuadu.com'
   - '+.lyjiayi.com'
+  - '+.lyjxwl.com'
   - '+.lylddz2021.com'
   - '+.lylryy.com'
   - '+.lymil.com'
   - '+.lymlgj.com'
-  - '+.lyn8.com'
   - '+.lynkco.com'
   - '+.lynlzqy.com'
   - '+.lynr.com'
@@ -40145,6 +40130,7 @@ payload:
   - '+.mianwai.com'
   - '+.mianxiangxue.com'
   - '+.miao-lang.com'
+  - '+.miao.su'
   - '+.miaobe.com'
   - '+.miaoche.com'
   - '+.miaodiyun.com'
@@ -40807,6 +40793,7 @@ payload:
   - '+.moemiao.net'
   - '+.moenis.com'
   - '+.moeover.com'
+  - '+.moerail.ml'
   - '+.moerkeji.net'
   - '+.moerlong.com'
   - '+.moesola.com'
@@ -40962,6 +40949,7 @@ payload:
   - '+.mop.com'
   - '+.mopaas.com'
   - '+.mopaasapp.com'
+  - '+.mopair-erm.net'
   - '+.mopcn.com'
   - '+.mopei8.com'
   - '+.moper.me'
@@ -41041,7 +41029,6 @@ payload:
   - '+.moviemore.com'
   - '+.movit-tech.com'
   - '+.mowan123.com'
-  - '+.mowangblog.com'
   - '+.mowowo.com'
   - '+.mowuhe.com'
   - '+.mox.moe'
@@ -41154,6 +41141,7 @@ payload:
   - '+.mshxw.com'
   - '+.msits.com'
   - '+.msjcqm.com'
+  - '+.msjxxz.com'
   - '+.mskjf.com'
   - '+.msl.la'
   - '+.mslzz.com'
@@ -41621,6 +41609,7 @@ payload:
   - '+.mystudyerte.com'
   - '+.mysubmail.com'
   - '+.mysupa.com'
+  - '+.mysuperbest.com'
   - '+.mysuperdns.com'
   - '+.mysvw.com'
   - '+.myt126.com'
@@ -41929,7 +41918,6 @@ payload:
   - '+.ncpssd.org'
   - '+.ncq8.com'
   - '+.ncrica.org'
-  - '+.ncseopx.com'
   - '+.ncu.me'
   - '+.ncvtinfo.com'
   - '+.ncvtmi.com'
@@ -42108,6 +42096,7 @@ payload:
   - '+.newdao.net'
   - '+.newday.me'
   - '+.newdefend.com'
+  - '+.newdiediao.com'
   - '+.newdon.net'
   - '+.newdruginfo.com'
   - '+.newdu.com'
@@ -42834,7 +42823,6 @@ payload:
   - '+.nx.cm'
   - '+.nx5.com'
   - '+.nxadmin.com'
-  - '+.nxboluo.com'
   - '+.nxcells.com'
   - '+.nxdns.net'
   - '+.nxecaiji.com'
@@ -43981,7 +43969,6 @@ payload:
   - '+.pcbbar.com'
   - '+.pcbbbs.com'
   - '+.pcbdoor.com'
-  - '+.pcben.com'
   - '+.pcbeta.com'
   - '+.pcbhunt.com'
   - '+.pcbiot.com'
@@ -44210,7 +44197,6 @@ payload:
   - '+.pgysoft.com'
   - '+.pgzs.com'
   - '+.pgzx.net'
-  - '+.ph1126.net'
   - '+.phalapi.net'
   - '+.pharmcube.com'
   - '+.phaser-china.com'
@@ -44739,7 +44725,6 @@ payload:
   - '+.polywuye.com'
   - '+.pomears.com'
   - '+.pomoho.com'
-  - '+.pondsi.com'
   - '+.ponley.com'
   - '+.ponycool.com'
   - '+.ponytest.com'
@@ -46801,7 +46786,6 @@ payload:
   - '+.qyiliao.com'
   - '+.qyjpzx.com'
   - '+.qykh2009.com'
-  - '+.qykj001.com'
   - '+.qyle1.com'
   - '+.qyled.xyz'
   - '+.qymgc.com'
@@ -47049,7 +47033,6 @@ payload:
   - '+.readhb.com'
   - '+.readhr360.com'
   - '+.readhub.me'
-  - '+.readjp.com'
   - '+.readlishi.com'
   - '+.readm.tech'
   - '+.readmail.net'
@@ -49543,7 +49526,6 @@ payload:
   - '+.shouce.ren'
   - '+.shouce365.com'
   - '+.shouchaobao.com'
-  - '+.shouchaobao.vip'
   - '+.shouchaobaoquan.com'
   - '+.shoucheng123.com'
   - '+.shoucw.com'
@@ -50873,7 +50855,6 @@ payload:
   - '+.songshu.cc'
   - '+.songshudiandian.com'
   - '+.songshuhui.net'
-  - '+.songshushan.com'
   - '+.songshushuo.com'
   - '+.songsongruanwen.com'
   - '+.songsongxiongdi.com'
@@ -50915,6 +50896,7 @@ payload:
   - '+.soosmart.com'
   - '+.sootoo.com'
   - '+.sooxue.com'
+  - '+.sooyisi.com'
   - '+.sooyooj.com'
   - '+.sooyuu.com'
   - '+.soozhu.com'
@@ -54389,7 +54371,6 @@ payload:
   - '+.tsz.com'
   - '+.tszckj.com'
   - '+.tszs360.com'
-  - '+.tszww.net'
   - '+.tszyzx.com'
   - '+.tt-bike.com'
   - '+.tt-ly.com'
@@ -54412,7 +54393,6 @@ payload:
   - '+.ttcad.com'
   - '+.ttcdy.com'
   - '+.ttdailynews.com'
-  - '+.ttdong.com'
   - '+.ttdown.com'
   - '+.ttdtweb.com'
   - '+.ttdz03.com'
@@ -56277,7 +56257,6 @@ payload:
   - '+.vpbus.com'
   - '+.vpcoupons.com'
   - '+.vpcs.com'
-  - '+.vpeitu.com'
   - '+.vpgame.com'
   - '+.vpgcdn.com'
   - '+.vpiaotong.com'
@@ -56680,7 +56659,6 @@ payload:
   - '+.wangi.cc'
   - '+.wangid.com'
   - '+.wangjianshuo.com'
-  - '+.wangjie.org'
   - '+.wangjinle.com'
   - '+.wangjubao.com'
   - '+.wangjunwei.com'
@@ -57432,7 +57410,6 @@ payload:
   - '+.wekuo.com'
   - '+.welansh.com'
   - '+.welcrm.com'
-  - '+.weldr.net'
   - '+.weldzy.com'
   - '+.welefen.com'
   - '+.weleve.com'
@@ -61754,7 +61731,6 @@ payload:
   - '+.xxhkt.com'
   - '+.xxhyzd.com'
   - '+.xxingclub.com'
-  - '+.xxingqu.com'
   - '+.xxjcy.com'
   - '+.xxjr.com'
   - '+.xxjrjxc.com'
@@ -62364,7 +62340,6 @@ payload:
   - '+.ycyjkj.com'
   - '+.ycym.com'
   - '+.ycyui.com'
-  - '+.ycyy365.com'
   - '+.yczihua.com'
   - '+.yda513.com'
   - '+.ydaobo.com'
@@ -62920,7 +62895,6 @@ payload:
   - '+.yinghecloud.com'
   - '+.yingheying.com'
   - '+.yinghezhong.com'
-  - '+.yinghuahm.com'
   - '+.yinghualiu.com'
   - '+.yinghub.com'
   - '+.yingjia360.com'
@@ -63447,7 +63421,6 @@ payload:
   - '+.yngw518.com'
   - '+.yngwyw.org'
   - '+.ynhanfu.com'
-  - '+.ynhjpf.com'
   - '+.ynhl.net'
   - '+.ynho.com'
   - '+.ynhouse.com'
@@ -65965,6 +65938,7 @@ payload:
   - '+.zhiguang.me'
   - '+.zhigudata.com'
   - '+.zhihe.mobi'
+  - '+.zhihejia.com'
   - '+.zhihemobi.com'
   - '+.zhihengwangchen.com'
   - '+.zhihjf.com'
@@ -66292,7 +66266,6 @@ payload:
   - '+.zhongzhixin.com'
   - '+.zhongzhoutm.com'
   - '+.zhongzq.com'
-  - '+.zhonyas.com'
   - '+.zhonzhu.com'
   - '+.zhopera.com'
   - '+.zhou1go.com'
@@ -66454,7 +66427,6 @@ payload:
   - '+.zhuji.la'
   - '+.zhuji.net'
   - '+.zhujia360.com'
-  - '+.zhujiaimg.com'
   - '+.zhujian.org'
   - '+.zhujiangbeer.com'
   - '+.zhujiange.com'
