--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20220214023753
+  - DOMAIN-SUFFIX,#VER=20220215134031
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=58524
+  - DOMAIN-SUFFIX,#TOTAL_LINES=58519
   - DOMAIN-SUFFIX,00-gov.cn
   - DOMAIN-SUFFIX,000123456789.online
   - DOMAIN-SUFFIX,000123456789.site
@@ -1288,7 +1288,6 @@ payload:
   - DOMAIN-SUFFIX,360kaixin.com
   - DOMAIN-SUFFIX,360popads.com
   - DOMAIN-SUFFIX,360protected.com
-  - DOMAIN-SUFFIX,down.360safe.com
   - DOMAIN-SUFFIX,update.360safe.com
   - DOMAIN-SUFFIX,ini.update.360safe.com
   - DOMAIN-SUFFIX,inst.360safe.com
@@ -9807,7 +9806,6 @@ payload:
   - DOMAIN-SUFFIX,bildirt.com
   - DOMAIN-SUFFIX,dataflow.biliapi.com
   - DOMAIN-SUFFIX,web-player-tracker.biliapi.net
-  - DOMAIN-SUFFIX,live-trace.bilibili.com
   - DOMAIN-SUFFIX,miniapp.bilibili.com
   - DOMAIN-SUFFIX,cm.bilibili.com
   - DOMAIN-SUFFIX,line1-log.biligame.net
@@ -15892,6 +15890,7 @@ payload:
   - DOMAIN-SUFFIX,dfanalytics.dealerfire.com
   - DOMAIN-SUFFIX,ref.dealerinspire.com
   - DOMAIN-SUFFIX,yh6u.dealeusedevoyages.com
+  - DOMAIN-SUFFIX,analytics.dealmoon.com
   - DOMAIN-SUFFIX,dealspure.com
   - DOMAIN-SUFFIX,dealtsowbite.com
   - DOMAIN-SUFFIX,debadu.com
@@ -26840,7 +26839,6 @@ payload:
   - DOMAIN-SUFFIX,ioxiyaff.xyz
   - DOMAIN-SUFFIX,ip-label.net
   - DOMAIN-SUFFIX,observer.ip-label.net
-  - DOMAIN-SUFFIX,ip-tracker.org
   - DOMAIN-SUFFIX,ip2c.org
   - DOMAIN-SUFFIX,ip2map.com
   - DOMAIN-SUFFIX,ip2phrase.com
@@ -30866,7 +30864,6 @@ payload:
   - DOMAIN-SUFFIX,ssw.live.com
   - DOMAIN-SUFFIX,watson.live.com
   - DOMAIN-SUFFIX,live4sport.net
-  - DOMAIN-SUFFIX,live800.com
   - DOMAIN-SUFFIX,liveadexchanger.com
   - DOMAIN-SUFFIX,liveadoptimizer.com
   - DOMAIN-SUFFIX,liveadserver.net
@@ -40964,7 +40961,6 @@ payload:
   - DOMAIN-SUFFIX,sec.video.qq.com
   - DOMAIN-SUFFIX,sngapm.qq.com
   - DOMAIN-SUFFIX,sngmta.qq.com
-  - DOMAIN-SUFFIX,soup.v.qq.com
   - DOMAIN-SUFFIX,stat.y.qq.com
   - DOMAIN-SUFFIX,statistic.qzone.qq.com
   - DOMAIN-SUFFIX,strategy.beacon.qq.com
@@ -45602,7 +45598,6 @@ payload:
   - DOMAIN-SUFFIX,gecko-hl.snssdk.com
   - DOMAIN-SUFFIX,gecko-lq.snssdk.com
   - DOMAIN-SUFFIX,ic.snssdk.com
-  - DOMAIN-SUFFIX,is.snssdk.com
   - DOMAIN-SUFFIX,temai.snssdk.com
   - DOMAIN-SUFFIX,toutiao-frontier.snssdk.com
   - DOMAIN-SUFFIX,xlog.snssdk.com
