--- a/directbak.yaml
+++ b/directbak.yaml
@@ -5506,7 +5506,6 @@ payload:
   - '+.6070.tv'
   - '+.6071.com'
   - '+.607777.cc'
-  - '+.607p.com'
   - '+.6080d.com'
   - '+.6080j.com'
   - '+.6080k.com'
@@ -15530,7 +15529,6 @@ payload:
   - '+.chuanshanqundao.com'
   - '+.chuansongme.com'
   - '+.chuantec.com'
-  - '+.chuantou.org'
   - '+.chuanxincao.net'
   - '+.chuanye.com'
   - '+.chuanying365.com'
@@ -16955,7 +16953,6 @@ payload:
   - '+.comlbs.com'
   - '+.commchina.net'
   - '+.communicatte.com'
-  - '+.comnetix.com'
   - '+.comocloud.net'
   - '+.companydns.com'
   - '+.compassedu.hk'
@@ -20253,6 +20250,7 @@ payload:
   - '+.drlmeng.com'
   - '+.drm-x.com'
   - '+.drm-x.net'
+  - '+.drmaml.com'
   - '+.drmj.org'
   - '+.droi.com'
   - '+.droibaas.com'
@@ -21587,7 +21585,6 @@ payload:
   - '+.emeixs.com'
   - '+.emeor.com'
   - '+.emepu.com'
-  - '+.emindos.org'
   - '+.emjob.com'
   - '+.emlinix.com'
   - '+.emlog.net'
@@ -23931,7 +23928,6 @@ payload:
   - '+.fyjsz.net'
   - '+.fynas.com'
   - '+.fynews.net'
-  - '+.fynode.tk'
   - '+.fyq99.com'
   - '+.fyrcbk.com'
   - '+.fyrexian.com'
@@ -25224,7 +25220,6 @@ payload:
   - '+.gongzuoyun.org'
   - '+.gonsun.com'
   - '+.gonvvama.net'
-  - '+.gonxhn.com'
   - '+.goo17.com'
   - '+.gooagoo.com'
   - '+.gooann.com'
@@ -31274,6 +31269,7 @@ payload:
   - '+.inspur.com'
   - '+.inspuronline.com'
   - '+.inspurpower.com'
+  - '+.insta360.com'
   - '+.instafogging.com'
   - '+.insun-china.com'
   - '+.insuns.com'
@@ -32603,7 +32599,6 @@ payload:
   - '+.jialez.com'
   - '+.jialidun.com'
   - '+.jialingmm.net'
-  - '+.jializyw.com'
   - '+.jiameng.com'
   - '+.jiameng001.com'
   - '+.jiamengdp.com'
@@ -34740,6 +34735,7 @@ payload:
   - '+.kaixin5.net'
   - '+.kaixinbao.com'
   - '+.kaixindou.net'
+  - '+.kaixinguopiao.com'
   - '+.kaixinguopiaowu.net'
   - '+.kaixinhui.com'
   - '+.kaixinhui.net'
@@ -36808,7 +36804,6 @@ payload:
   - '+.lekoukou.com'
   - '+.lekpass.com'
   - '+.lelai.com'
-  - '+.lele1688.com'
   - '+.leleda.com'
   - '+.leledp.com'
   - '+.leleketang.com'
@@ -42620,6 +42615,7 @@ payload:
   - '+.ntfabu.com'
   - '+.ntfsformac.cc'
   - '+.nthfw.com'
+  - '+.nthysp.com'
   - '+.ntjoy.com'
   - '+.ntjrchina.com'
   - '+.ntjymall.com'
@@ -43156,7 +43152,6 @@ payload:
   - '+.oo14.com'
   - '+.oobao.net'
   - '+.oocct.com'
-  - '+.oocl.com'
   - '+.ooclab.com'
   - '+.ooe.la'
   - '+.oogcw.com'
@@ -45145,7 +45140,6 @@ payload:
   - '+.qbox.net'
   - '+.qbtlk.com'
   - '+.qbview.com'
-  - '+.qbwu.net'
   - '+.qbxs5.com'
   - '+.qbxz.com'
   - '+.qc-dds.net'
@@ -46701,7 +46695,6 @@ payload:
   - '+.qzfxyy.com'
   - '+.qzhlkj.net'
   - '+.qzhmzx.com'
-  - '+.qzhyxx.com'
   - '+.qzjcd.com'
   - '+.qzjkw.net'
   - '+.qzjlw.com'
@@ -50907,7 +50900,6 @@ payload:
   - '+.soweather.com'
   - '+.sowin.com'
   - '+.sowu.com'
-  - '+.soxs.cc'
   - '+.soxscc.info'
   - '+.soxsok.com'
   - '+.soxuxu.com'
@@ -52410,7 +52402,6 @@ payload:
   - '+.tamaegis.com'
   - '+.tamc8.com'
   - '+.tamersunion.net'
-  - '+.tamersunion.org'
   - '+.tamguo.com'
   - '+.tamigroup.com'
   - '+.tamll.com'
@@ -60278,7 +60269,6 @@ payload:
   - '+.xin.xin'
   - '+.xin1234.com'
   - '+.xin3721.com'
-  - '+.xin661.com'
   - '+.xinaigame.com'
   - '+.xinaitu.com'
   - '+.xinanidc.com'
@@ -64040,7 +64030,6 @@ payload:
   - '+.yuchu3d.com'
   - '+.yuchuantech.com'
   - '+.yucl.com'
-  - '+.yucongding.com'
   - '+.yucoolgame.com'
   - '+.yucui.org'
   - '+.yudanglasses.com'
@@ -64126,6 +64115,7 @@ payload:
   - '+.yueyuzhushou.com'
   - '+.yueyv.com'
   - '+.yuez.me'
+  - '+.yufeitongji.com'
   - '+.yufengyangfan.com'
   - '+.yufu365.com'
   - '+.yufuid.com'
@@ -65906,7 +65896,6 @@ payload:
   - '+.zhiyoo.com'
   - '+.zhiyoubao.com'
   - '+.zhiyuan-group.com'
-  - '+.zhiyuanhongda.com'
   - '+.zhiyuanit.com'
   - '+.zhiyuanyun.com'
   - '+.zhiyujit.com'
@@ -66410,7 +66399,6 @@ payload:
   - '+.ziguhonglan.com'
   - '+.zihai029.com'
   - '+.zihai0351.com'
-  - '+.zihai0411.com'
   - '+.zihai0535.com'
   - '+.zihai0591.com'
   - '+.zihai0595.com'
