--- a/directbak.yaml
+++ b/directbak.yaml
@@ -6708,6 +6708,7 @@ payload:
   - '+.88zb0.com'
   - '+.88zha.com'
   - '+.88zyw.net'
+  - '+.8910.io'
   - '+.89178.com'
   - '+.89303.com'
   - '+.893933.com'
@@ -8741,6 +8742,7 @@ payload:
   - '+.aliedge.com'
   - '+.alienfans.net'
   - '+.alientek.com'
+  - '+.aliexpress-media.com'
   - '+.aliexpress.com'
   - '+.aliexpress.ru'
   - '+.alifabu.com'
@@ -12801,6 +12803,7 @@ payload:
   - '+.byteimg.com'
   - '+.byteisland.com'
   - '+.bytelb.net'
+  - '+.bytemaimg.com'
   - '+.bytemastatic.com'
   - '+.byteorge.com'
   - '+.bytescm.com'
@@ -13442,6 +13445,7 @@ payload:
   - '+.cclcn.com'
   - '+.cclexpo.com'
   - '+.cclimg.com'
+  - '+.cclinux.org'
   - '+.cclndx.com'
   - '+.cclolcc.com'
   - '+.cclqme.xyz'
@@ -21424,7 +21428,6 @@ payload:
   - '+.ejoy.com'
   - '+.ejoy365hk.com'
   - '+.ejoy99.com'
-  - '+.ejoychina.com'
   - '+.ejrfood.com'
   - '+.ejttp.com'
   - '+.eju.com'
@@ -27671,6 +27674,7 @@ payload:
   - '+.hfcyh.com'
   - '+.hffund.com'
   - '+.hfgjj.com'
+  - '+.hfhcl.com'
   - '+.hfhouse.com'
   - '+.hfhyw.com'
   - '+.hfi-health.com'
@@ -28278,6 +28282,7 @@ payload:
   - '+.hnwlxh.net'
   - '+.hnwtv.com'
   - '+.hnwz8.com'
+  - '+.hnxdf.com'
   - '+.hnxfpfb.com'
   - '+.hnxgzg.com'
   - '+.hnxmxit.com'
@@ -30161,6 +30166,7 @@ payload:
   - '+.icewingcc.com'
   - '+.icfans.com'
   - '+.icfcc.com'
+  - '+.icfgblog.com'
   - '+.icfqs.com'
   - '+.icfusions.com'
   - '+.icgoo.net'
@@ -32171,7 +32177,6 @@ payload:
   - '+.jbfoundry.com'
   - '+.jbhdq.com'
   - '+.jbl100.com'
-  - '+.jblts.com'
   - '+.jbpbox.com'
   - '+.jbqipa.com'
   - '+.jbryun.com'
@@ -35808,7 +35813,6 @@ payload:
   - '+.kuakao.com'
   - '+.kuakao.net'
   - '+.kuaming.com'
-  - '+.kuandao.com'
   - '+.kuang-chi.com'
   - '+.kuang-chi.org'
   - '+.kuangchan.biz'
@@ -43550,7 +43554,6 @@ payload:
   - '+.palmyou.com'
   - '+.pamau.com'
   - '+.pamss.net'
-  - '+.pan-elektron.com'
   - '+.pan131.com'
   - '+.pan58.com'
   - '+.pan8.net'
@@ -44132,7 +44135,6 @@ payload:
   - '+.piaohuafl.com'
   - '+.piaojubao.com'
   - '+.piaoliang.com'
-  - '+.piaolianghuay.com'
   - '+.piaoniu.com'
   - '+.piaoquantv.com'
   - '+.piaoshen.com'
@@ -53244,7 +53246,6 @@ payload:
   - '+.ticp.io'
   - '+.ticp.net'
   - '+.ticstore.com'
-  - '+.tictalk.vip'
   - '+.ticwear.com'
   - '+.tida120.com'
   - '+.tidb.io'
@@ -56156,7 +56157,6 @@ payload:
   - '+.vvvdj.com'
   - '+.vvvfans.com'
   - '+.vvzero.com'
-  - '+.vwanka.com'
   - '+.vweizhan.com'
   - '+.vwhulian.com'
   - '+.vwvvwv.com'
@@ -56536,7 +56536,6 @@ payload:
   - '+.wannianli.mobi'
   - '+.wannianli.net'
   - '+.wannuoda.com'
-  - '+.wanplus.com'
   - '+.wanqianyun.com'
   - '+.wanquankan.com'
   - '+.wanrenxing.net'
@@ -57781,7 +57780,6 @@ payload:
   - '+.wilddog.com'
   - '+.wilddream.net'
   - '+.wildgun.net'
-  - '+.will6.com'
   - '+.willcdn.com'
   - '+.willmao.com'
   - '+.willsemi.com'
@@ -61095,6 +61093,7 @@ payload:
   - '+.xstqj.com'
   - '+.xstt5.com'
   - '+.xstx.info'
+  - '+.xstxt.com'
   - '+.xsu.cc'
   - '+.xsvps.com'
   - '+.xswdcasting.com'
@@ -61591,7 +61590,6 @@ payload:
   - '+.xysy.com'
   - '+.xytjcpj.com'
   - '+.xytzg.com'
-  - '+.xyun1.com'
   - '+.xyunqi.com'
   - '+.xyvend.com'
   - '+.xyvending.com'
@@ -61724,6 +61722,7 @@ payload:
   - '+.yafdev.com'
   - '+.yafeilinux.com'
   - '+.yageo.tech'
+  - '+.yago-mall.com'
   - '+.yahacode.com'
   - '+.yahaizi.com'
   - '+.yahei.net'
@@ -64908,6 +64907,7 @@ payload:
   - '+.zczj.com'
   - '+.zczy001.com'
   - '+.zd-ddos.com'
+  - '+.zd-ddos.net'
   - '+.zd-power.com'
   - '+.zd.hk'
   - '+.zd200572.com'
@@ -65598,7 +65598,6 @@ payload:
   - '+.zhibo.co'
   - '+.zhibo.me'
   - '+.zhibo.tv'
-  - '+.zhibo11.com'
   - '+.zhibo8.cc'
   - '+.zhibo8.com'
   - '+.zhiboba.com'
@@ -67277,7 +67276,6 @@ payload:
   - '+.zxe-china.com'
   - '+.zxerp.com'
   - '+.zxfvip.com'
-  - '+.zxgnz.com'
   - '+.zxgongshui.com'
   - '+.zxgzs.com'
   - '+.zxgzw.com'
