--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3246,7 +3246,6 @@ payload:
   - '+.369beauty.com'
   - '+.369wenku.com'
   - '+.369xxw.com'
-  - '+.36code.com'
   - '+.36dianping.com'
   - '+.36dj.com'
   - '+.36hjob.com'
@@ -6555,6 +6554,7 @@ payload:
   - '+.86control.com'
   - '+.86ditu.com'
   - '+.86djw.com'
+  - '+.86dm.cc'
   - '+.86eh.com'
   - '+.86fis.com'
   - '+.86fm.com'
@@ -10994,7 +10994,6 @@ payload:
   - '+.beikeapp.com'
   - '+.beikeba.com'
   - '+.beikeit.com'
-  - '+.beikel.net'
   - '+.beikeread.com'
   - '+.beikongyun.com'
   - '+.beileike.com'
@@ -12217,7 +12216,6 @@ payload:
   - '+.bolehu.net'
   - '+.bolejiang.com'
   - '+.bolelink.com'
-  - '+.bolianpro.com'
   - '+.boll.me'
   - '+.bolo.me'
   - '+.bolopp.com'
@@ -12556,7 +12554,6 @@ payload:
   - '+.budao.com'
   - '+.budao24.com'
   - '+.buddhalikedoge.com'
-  - '+.budejie.com'
   - '+.budhano.com'
   - '+.buding.tv'
   - '+.budongnvren.com'
@@ -12883,7 +12880,6 @@ payload:
   - '+.c3x.me'
   - '+.c4008.com'
   - '+.c400c.cc'
-  - '+.c44ff.com'
   - '+.c4d.live'
   - '+.c4datc.com'
   - '+.c4dba.com'
@@ -14216,7 +14212,6 @@ payload:
   - '+.chaochaojin.com'
   - '+.chaofan.wang'
   - '+.chaofan365.com'
-  - '+.chaofan86.com'
   - '+.chaofanaishangyu.com'
   - '+.chaofanshuma.com'
   - '+.chaofenxiang.vip'
@@ -16866,8 +16861,6 @@ payload:
   - '+.colourhs.com'
   - '+.colourlife.com'
   - '+.com-dy1-youku.com'
-  - '+.com-h-bilibili.com'
-  - '+.com-h-pptv.com'
   - '+.com-h-sina.com'
   - '+.com-rail.com'
   - '+.com.fi'
@@ -18582,7 +18575,6 @@ payload:
   - '+.dbh123.net'
   - '+.dbkan.com'
   - '+.dblgf.com'
-  - '+.dblwww.com'
   - '+.dbm-sh.com'
   - '+.dbmailserver.com'
   - '+.dbmall.com'
@@ -19158,6 +19150,7 @@ payload:
   - '+.dianshangyi.com'
   - '+.dianshi.com'
   - '+.dianshige.com'
+  - '+.dianshihome.com'
   - '+.dianshijia.com'
   - '+.diantoushi.com'
   - '+.diantui.net'
@@ -23640,7 +23633,6 @@ payload:
   - '+.fuioupay.com'
   - '+.fujiabin.com'
   - '+.fujianlaser.com'
-  - '+.fujianqq.com'
   - '+.fujianrc.com'
   - '+.fujiansme.com'
   - '+.fujieace.com'
@@ -23840,7 +23832,6 @@ payload:
   - '+.fybiji.com'
   - '+.fybooks.com'
   - '+.fybxw.com'
-  - '+.fycarto.com'
   - '+.fychinago.com'
   - '+.fydeos.com'
   - '+.fydisk.com'
@@ -26523,7 +26514,6 @@ payload:
   - '+.hangpu-topsys.com'
   - '+.hanguangbaihuo.com'
   - '+.hanguopai.com'
-  - '+.hanguoyou.org'
   - '+.hanguu.com'
   - '+.hangxinyiqi.xin'
   - '+.hangye114.net'
@@ -29107,7 +29097,6 @@ payload:
   - '+.huayuanlcd.com'
   - '+.huayuannongji.com'
   - '+.huayue119.com'
-  - '+.huayuebaobao.com'
   - '+.huayuejob.com'
   - '+.huayun.com'
   - '+.huayunshuzi.com'
@@ -33522,7 +33511,6 @@ payload:
   - '+.jmstatic.com'
   - '+.jmtd0531.com'
   - '+.jmtsg.com'
-  - '+.jmxfw.com'
   - '+.jmxw.net'
   - '+.jmykw.com'
   - '+.jmyna.net'
@@ -34256,7 +34244,6 @@ payload:
   - '+.juwanshe.com'
   - '+.juweixin.com'
   - '+.juxia.com'
-  - '+.juxiangyou.com'
   - '+.juxin.tv'
   - '+.juxinfu.com'
   - '+.juxing-edu.com'
@@ -36398,7 +36385,6 @@ payload:
   - '+.lasy.site'
   - '+.latchss.com'
   - '+.lategege.com'
-  - '+.latelee.org'
   - '+.latexstudio.net'
   - '+.latiaozixun.com'
   - '+.latiaozixun.net'
@@ -39501,7 +39487,6 @@ payload:
   - '+.meifajie.com'
   - '+.meifang8.com'
   - '+.meifazu.com'
-  - '+.meifengyigou.com'
   - '+.meigeinc.com'
   - '+.meigongla.com'
   - '+.meigongyun.com'
@@ -41220,6 +41205,7 @@ payload:
   - '+.mydebook.com'
   - '+.mydeershow.com'
   - '+.mydf.net'
+  - '+.mydianshijia.com'
   - '+.mydical.com'
   - '+.mydict.org'
   - '+.mydigi.net'
@@ -42275,6 +42261,7 @@ payload:
   - '+.nmzc02.com'
   - '+.nmzh.net'
   - '+.nmzol.com'
+  - '+.nmzzlhwlkj.com'
   - '+.nn.ci'
   - '+.nn.com'
   - '+.nn92.com'
@@ -42708,7 +42695,6 @@ payload:
   - '+.oceanol.com'
   - '+.oceanplayable.com'
   - '+.oceeq.com'
-  - '+.ochukai.me'
   - '+.ocimg.com'
   - '+.oclkj.com'
   - '+.ocooca.com'
@@ -43843,6 +43829,7 @@ payload:
   - '+.pearvideo.com'
   - '+.peasrch.com'
   - '+.pec365.com'
+  - '+.pechoin.com'
   - '+.pediy.com'
   - '+.pedli.com'
   - '+.peento.com'
@@ -43873,7 +43860,6 @@ payload:
   - '+.pemap.com'
   - '+.pending-renewal-domain.com'
   - '+.pendoapp.com'
-  - '+.peng001.com'
   - '+.pengchengenergy.com'
   - '+.pengfu.com'
   - '+.penging.com'
@@ -47187,7 +47173,6 @@ payload:
   - '+.roland-china.com'
   - '+.rollupjs.com'
   - '+.rom100.com'
-  - '+.romanting.com'
   - '+.romeng.men'
   - '+.romhui.com'
   - '+.romjd.com'
@@ -48032,6 +48017,7 @@ payload:
   - '+.sd-blb.com'
   - '+.sd-cellbank.com'
   - '+.sd-ex.com'
+  - '+.sd-pic.com'
   - '+.sd-sma.com'
   - '+.sd-xd.net'
   - '+.sd-ysjt.com'
@@ -49279,7 +49265,6 @@ payload:
   - '+.shouji56-img.com'
   - '+.shouji56.com'
   - '+.shoujibao.net'
-  - '+.shoujidaren.com'
   - '+.shoujiduoduo.com'
   - '+.shoujihuifu.com'
   - '+.shoujikanshu.cc'
@@ -49609,6 +49594,7 @@ payload:
   - '+.shuyouji.vip'
   - '+.shuyuewu.co'
   - '+.shuyun.com'
+  - '+.shuzhi9.com'
   - '+.shuzhiduo.com'
   - '+.shuzibao.com'
   - '+.shuziju.com'
@@ -52130,7 +52116,6 @@ payload:
   - '+.t2df.com'
   - '+.t3315.com'
   - '+.t365777.com'
-  - '+.t3pp.com'
   - '+.t5.work'
   - '+.t56.net'
   - '+.t56jy.net'
@@ -52292,7 +52277,6 @@ payload:
   - '+.tangmi.net'
   - '+.tangobrowser.net'
   - '+.tangongye.com'
-  - '+.tangqiu.tv'
   - '+.tangrenjv.com'
   - '+.tangruiqian.com'
   - '+.tangsanshu.com'
@@ -53378,7 +53362,6 @@ payload:
   - '+.tjitrc.com'
   - '+.tjj.com'
   - '+.tjjapp.com'
-  - '+.tjjingjie.com'
   - '+.tjjt360.com'
   - '+.tjjwt.com'
   - '+.tjkpzx.com'
@@ -58988,7 +58971,6 @@ payload:
   - '+.wzz180809.net'
   - '+.wzz1809.com'
   - '+.wzzww.com'
-  - '+.x--w.com'
   - '+.x-bows.com'
   - '+.x-cti.org'
   - '+.x-jishu.com'
@@ -59475,7 +59457,6 @@ payload:
   - '+.xiagepian.com'
   - '+.xiakeol.com'
   - '+.xialaile.com'
-  - '+.xialatong.com'
   - '+.xiald.com'
   - '+.xialingying.cc'
   - '+.xialv.com'
@@ -59950,7 +59931,6 @@ payload:
   - '+.xiaozhustatic2.com'
   - '+.xiaozhustatic3.com'
   - '+.xiaozhuvideo.com'
-  - '+.xiaozigame.com'
   - '+.xiaozuan8.com'
   - '+.xiaozujian.com'
   - '+.xiaozuowen.net'
@@ -60084,7 +60064,6 @@ payload:
   - '+.xilexuan.com'
   - '+.xileyougame.com'
   - '+.xilidou.com'
-  - '+.xilinglong.net'
   - '+.xilinjie.com'
   - '+.xilinsi.org'
   - '+.xilish.com'
@@ -61703,7 +61682,6 @@ payload:
   - '+.yanfen.online'
   - '+.yang16.com'
   - '+.yangbing.club'
-  - '+.yangcai168.com'
   - '+.yangchebao.cc'
   - '+.yangchenglianhe.com'
   - '+.yangchunjian.com'
@@ -64493,7 +64471,6 @@ payload:
   - '+.yyearth.com'
   - '+.yyestar.com'
   - '+.yyetss.com'
-  - '+.yyf5.com'
   - '+.yyfangchan.com'
   - '+.yyfax.com'
   - '+.yyfdcw.com'
@@ -66712,7 +66689,6 @@ payload:
   - '+.znyp.com'
   - '+.znyseo.com'
   - '+.znyshurufa.com'
-  - '+.znyt.net'
   - '+.znyxb.com'
   - '+.znzbt.com'
   - '+.znznet.net'
