--- a/directbak.yaml
+++ b/directbak.yaml
@@ -927,6 +927,7 @@ payload:
   - '+.108cun.com'
   - '+.108pk.com'
   - '+.108qi.com'
+  - '+.108shu.com'
   - '+.108sq.com'
   - '+.108tian.com'
   - '+.109.com'
@@ -6065,7 +6066,6 @@ payload:
   - '+.77745.com'
   - '+.777524.com'
   - '+.7775367.com'
-  - '+.777684a.com'
   - '+.777lala.com'
   - '+.777moban.com'
   - '+.777n.com'
@@ -7843,7 +7843,6 @@ payload:
   - '+.acgdb.com'
   - '+.acgdmzy.com'
   - '+.acgdoge.net'
-  - '+.acgface.com'
   - '+.acgist.com'
   - '+.acgn.pw'
   - '+.acgnt.com'
@@ -8076,7 +8075,6 @@ payload:
   - '+.aesml.com'
   - '+.aesucai.com'
   - '+.aevit.xyz'
-  - '+.aex88.com'
   - '+.af360.com'
   - '+.afanti100.com'
   - '+.afarway.com'
@@ -10072,7 +10070,6 @@ payload:
   - '+.b7l.cc'
   - '+.b8yx.com'
   - '+.ba-li.com'
-  - '+.ba125.com'
   - '+.ba210.com'
   - '+.baaidu.com'
   - '+.baalchina.net'
@@ -22577,7 +22574,6 @@ payload:
   - '+.fdzq.com'
   - '+.fe-cable.com'
   - '+.fe2x.cc'
-  - '+.fe347.com'
   - '+.fe520.com'
   - '+.fearlazy.com'
   - '+.feaye.com'
@@ -25459,7 +25455,6 @@ payload:
   - '+.gtm-i1d9.com'
   - '+.gtmlufax.com'
   - '+.gtn9.com'
-  - '+.gtnqk.com'
   - '+.gto365.com'
   - '+.gtobal.com'
   - '+.gttof2020.com'
@@ -35965,7 +35960,6 @@ payload:
   - '+.l7audiolab.com'
   - '+.l99.com'
   - '+.la-mo.com'
-  - '+.la31.com'
   - '+.lab-z.com'
   - '+.labagd.com'
   - '+.labahao.com'
@@ -37399,6 +37393,7 @@ payload:
   - '+.lishouhong.com'
   - '+.lishuhang.me'
   - '+.lishui.com'
+  - '+.lisinit.com'
   - '+.lisizhang.com'
   - '+.lisp123.com'
   - '+.listarypro.com'
@@ -37637,6 +37632,7 @@ payload:
   - '+.lkkued.com'
   - '+.lkmcdk.com'
   - '+.lkme.cc'
+  - '+.lkong.com'
   - '+.lkong.net'
   - '+.lkxianglong.net'
   - '+.lkyou.com'
@@ -39883,7 +39879,6 @@ payload:
   - '+.midaijihua.com'
   - '+.midainc.com'
   - '+.midasbuy.com'
-  - '+.midday.me'
   - '+.midea.com.tr'
   - '+.midea.com'
   - '+.midicn.com'
@@ -40436,7 +40431,6 @@ payload:
   - '+.modernsky.com'
   - '+.modernweekly.com'
   - '+.modian.com'
-  - '+.modoer.com'
   - '+.modooplay.com'
   - '+.modulesocean.com'
   - '+.moduovr.com'
@@ -42926,6 +42920,7 @@ payload:
   - '+.onlyyou.com'
   - '+.onmpw.com'
   - '+.ono-bbb.com'
+  - '+.ononw.com'
   - '+.onqc.com'
   - '+.ontheroadstore.com'
   - '+.onthink.com'
