--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2631,6 +2631,7 @@ payload:
   - '+.2ktvb.com'
   - '+.2kxs.org'
   - '+.2kz.net'
+  - '+.2lian.com'
   - '+.2liang.net'
   - '+.2lieqi.com'
   - '+.2loveyou.com'
@@ -21227,6 +21228,7 @@ payload:
   - '+.ehcoo.com'
   - '+.ehealthcareforum.com'
   - '+.ehedco.com'
+  - '+.ehijoy.com'
   - '+.ehiman.com'
   - '+.ehinvest.hk'
   - '+.ehome5.com'
@@ -26253,6 +26255,7 @@ payload:
   - '+.haiqingyanyu.com'
   - '+.haiqisoft.com'
   - '+.haiqq.com'
+  - '+.hair43.com'
   - '+.hair8.net'
   - '+.hairbobo.com'
   - '+.hairunmedia.com'
@@ -35450,6 +35453,7 @@ payload:
   - '+.ksyunad.com'
   - '+.ksyuncdn-k1.com'
   - '+.ksyuncdn.com'
+  - '+.ksyuncs.com'
   - '+.ksyungslb.com'
   - '+.ksyunv5.com'
   - '+.ksyunwaf.com'
@@ -66966,6 +66970,7 @@ payload:
   - '+.zxzlf.com'
   - '+.zxzyl.com'
   - '+.zxzyy.com'
+  - '+.zy91.com'
   - '+.zy-cam.com'
   - '+.zy2071.com'
   - '+.zy728.com'
