--- a/directbak.yaml
+++ b/directbak.yaml
@@ -8720,6 +8720,7 @@ payload:
   - '+.aliyundunwaf.com'
   - '+.aliyunedu.net'
   - '+.aliyunfuwuqi.com'
+  - '+.aliyunga0017.com'
   - '+.aliyunga0018.com'
   - '+.aliyungf.com'
   - '+.aliyunhn.com'
@@ -12054,6 +12055,7 @@ payload:
   - '+.boluo.com'
   - '+.boluo.link'
   - '+.boluo.org'
+  - '+.boluocat.com'
   - '+.boluogouwu.com'
   - '+.boluomee.com'
   - '+.boluomeet.com'
@@ -13821,6 +13823,7 @@ payload:
   - '+.cgbolo.com'
   - '+.cgboo.com'
   - '+.cgcountry.com'
+  - '+.cgdeuvip.com'
   - '+.cgdown.com'
   - '+.cgdream.org'
   - '+.cgebook.com'
@@ -16639,6 +16642,7 @@ payload:
   - '+.cojia.net'
   - '+.cokemine.com'
   - '+.cokll.com'
+  - '+.cokutau.com'
   - '+.col.ink'
   - '+.coladrive.com'
   - '+.colafile.com'
@@ -25168,6 +25172,7 @@ payload:
   - '+.gsmyi.com'
   - '+.gspaceteam.com'
   - '+.gspcc.com'
+  - '+.gsqstudio.com'
   - '+.gsqx.com'
   - '+.gsrcu.com'
   - '+.gsrecv.com'
@@ -25538,6 +25543,7 @@ payload:
   - '+.gushequ.com'
   - '+.gushi.ci'
   - '+.gushi.com'
+  - '+.gushi365.com'
   - '+.gushicimingju.com'
   - '+.gushidaquan.cc'
   - '+.gushiju.net'
@@ -27217,6 +27223,7 @@ payload:
   - '+.hengwenzhendangqi.com'
   - '+.hengxiangtaji.com'
   - '+.hengxinjinshu.com'
+  - '+.hengxueedu.com'
   - '+.hengyan.com'
   - '+.hengyer.com'
   - '+.hengyidai.com'
@@ -34423,6 +34430,7 @@ payload:
   - '+.kaoshidian.com'
   - '+.kaoshishenqi.net'
   - '+.kaoshizixun.com'
+  - '+.kaotipai.com'
   - '+.kaowana.com'
   - '+.kaowang.com'
   - '+.kaoyan.com'
@@ -37379,6 +37387,7 @@ payload:
   - '+.lmbus.com'
   - '+.lmdk01.com'
   - '+.lmdouble.com'
+  - '+.lmeee.com'
   - '+.lmf9.com'
   - '+.lmgouwu.com'
   - '+.lmjtgs.com'
@@ -38989,6 +38998,7 @@ payload:
   - '+.mdjhxgjyc.com'
   - '+.mdjyadi.com'
   - '+.mdjyouth.com'
+  - '+.mdl.ink'
   - '+.mdmmm.com'
   - '+.mdnice.com'
   - '+.mdo52.com'
@@ -40626,6 +40636,7 @@ payload:
   - '+.mutualhunter.com'
   - '+.mutuoluo.com'
   - '+.muwai.com'
+  - '+.muwuya.com'
   - '+.mux5.com'
   - '+.muxin.fun'
   - '+.muxiulin.com'
@@ -41961,6 +41972,7 @@ payload:
   - '+.novapps.com'
   - '+.novastargame.net'
   - '+.novel-supertv.com'
+  - '+.noveless.com'
   - '+.novemideas.com'
   - '+.novotimes.com'
   - '+.novtium.com'
@@ -42900,7 +42912,6 @@ payload:
   - '+.oushinet.com'
   - '+.oushivoyages.com'
   - '+.ousns.net'
-  - '+.outbrai.com'
   - '+.outlets365.com'
   - '+.ouvps.com'
   - '+.ouxutong.com'
@@ -43146,6 +43157,7 @@ payload:
   - '+.paopaohd.com'
   - '+.paopaox.com'
   - '+.paoshuba.cc'
+  - '+.paotxt.net'
   - '+.paoxq.com'
   - '+.paoxue.com'
   - '+.papa21.com'
@@ -44626,7 +44638,6 @@ payload:
   - '+.qdcypf.com'
   - '+.qdcz.com'
   - '+.qddown.com'
-  - '+.qdds.net'
   - '+.qdfuns.com'
   - '+.qdgege.com'
   - '+.qdgw.com'
@@ -49121,6 +49132,7 @@ payload:
   - '+.shxibeiquanshe.com'
   - '+.shxil.com'
   - '+.shxkwck.com'
+  - '+.shxmhc.com'
   - '+.shxpp.com'
   - '+.shxt.com'
   - '+.shxwcb.com'
@@ -49177,7 +49189,6 @@ payload:
   - '+.sias-sha.com'
   - '+.sibfi.com'
   - '+.sibida.net'
-  - '+.sic.hk'
   - '+.sicheng.net'
   - '+.sicher-elevator.com'
   - '+.sichina.com'
@@ -50961,6 +50972,7 @@ payload:
   - '+.supmil.net'
   - '+.supoin.com'
   - '+.supool.com'
+  - '+.supor.com'
   - '+.suporpe.com'
   - '+.support-cn.samsung.com'
   - '+.support.globalsign.com'
@@ -51735,6 +51747,7 @@ payload:
   - '+.tan14.net'
   - '+.tan8.com'
   - '+.tan90.me'
+  - '+.tanapk.com'
   - '+.tanbaicun.com'
   - '+.tanbo.name'
   - '+.tancdn.com'
@@ -53293,6 +53306,7 @@ payload:
   - '+.touzi.com'
   - '+.touzid.com'
   - '+.touzikuaibao.com'
+  - '+.touzime.com'
   - '+.touzizn.com'
   - '+.tower.im'
   - '+.towinor.com'
@@ -54141,6 +54155,7 @@ payload:
   - '+.u-road.com'
   - '+.u-tide.com'
   - '+.u005.com'
+  - '+.u062.com'
   - '+.u14.com'
   - '+.u148.net'
   - '+.u17.com'
@@ -57453,7 +57468,6 @@ payload:
   - '+.wmjygg.net'
   - '+.wmjyqd.net'
   - '+.wmjyszba.com'
-  - '+.wmk0099.xyz'
   - '+.wmljw.com'
   - '+.wmlunwen.com'
   - '+.wmnetwork.cc'
@@ -59864,6 +59878,7 @@ payload:
   - '+.xiqqq.com'
   - '+.xirang.com'
   - '+.xirenxuan.com'
+  - '+.xisaiwang.com'
   - '+.xishanju.com'
   - '+.xishaoye.com'
   - '+.xishiqu.com'
@@ -63893,6 +63908,7 @@ payload:
   - '+.yyming2.com'
   - '+.yymoban.com'
   - '+.yyny.me'
+  - '+.yyouren.com'
   - '+.yypcb.com'
   - '+.yypm.com'
   - '+.yypt.com'
@@ -66455,6 +66471,7 @@ payload:
   - '+.zuosa.com'
   - '+.zuoshipin.com'
   - '+.zuotishi.com'
+  - '+.zuotixia.com'
   - '+.zuowen.com'
   - '+.zuowen8.com'
   - '+.zuowenck.com'
